--- a/text/看书.md
+++ b/text/看书.md
@@ -13,7 +13,7 @@
 
 你不是有了操作后得到k的方法吗，那就代入n，a，b等的具体数值，算出k的值，注意不止一个，不要漏掉了。有漏掉好判定，给出答案没有的k值，验证满足条件就可以了，但正确答案给出k的所有取值，怎么才能自证没有漏掉呢？初步想到一种思路，就是给定n，遍历所有可能的a和b，一一验证，因为n，a，b都是正整数，所以是可以验证的。这段话说的很乱。遍历ab是什么意思？这里ab是构造需要的条件，遍历的应该是构造方式，至于构造方式应该怎么遍历我没什么思路，是先遍历每个点然后放上直线，还是先遍历每条直线再找点穿过？或者很有可能这两种遍历都和这道题的答案无关。关于漏掉的问题，一般是这样自证，初始状态k的取值在某个集合内，假设第x个状态也在取值范围内，输入第x状态的相关数值通过合法操作得到x+1状态，此时k的取值仍然在某个集合内，那么k就不会跳出这个集合，所以k是无遗漏的。
 
-上面这段话可以看出我的思维固化了，我一直想的是n条直线，每条直线可以平移到任意位置，旋转360度得到无数种构造方式，但这无数种位置绝大多数是不覆盖的，需要从中找出能覆盖的n条直线，只要把全部点都覆盖了，一条直线覆盖的多一点，剩几条远在千里之外也没关系。然后再从满足条件的n条直线的构造中计算出k值。事实上是很多种构造对应同一个k值，但题目只要求一个k值有一种构造就是解，而k值需要考虑的是0、1、2、n-x、n-2、n-1、n这几种情况就行了，根本就不需要考虑所有的构造。写到这里虽然我还不知道答案的具体细节，但基本把题目的意思搞明白了。之前关于漏掉的判定都是基于对题目错误的理解，现在有了新的理解，漏掉的问题就要重新考虑了，不能说前面思考过了接下来就可以逃避了，因为之前的理解和现在的理解可能是两种不同的场景。
+上面这段话可以看出我的思维固化了，我一直想的是n条直线，每条直线可以平移到任意位置，旋转360度得到无数种构造方式，但这无数种位置绝大多数是不覆盖的，需要从中找出能覆盖的n条直线，只要把全部点都覆盖了，一条直线覆盖的多一点，剩几条远在千里之外也没关系。然后再从满足条件的n条直线的构造中计算出k值。事实上是很多种构造对应同一个k值，但题目只要求一个k值有一种构造就是解，而k值需要考虑的是0、1、2、n-x、n-2、n-1、n这几种情况就行了，根本就不需要考虑所有n条直线的构造。写到这里虽然我还不知道答案的具体细节，但基本把题目的意思搞明白了。之前关于漏掉的判定都是基于对题目错误的理解，现在有了新的理解，漏掉的问题就要重新考虑了，不能说前面思考过了接下来就可以逃避了，因为之前的理解和现在的理解可能是两种不同的场景。
 
 感觉对题意的理解还是一知半解的，先找找题目中一些隐含的条件，a和b是正整数，所以满足a+b<=n+1的ab取值是有限的，如果不限制整数会怎么样？那ab就有无数个点，n条直线肯定是覆盖不了的。我现在有点明白题目的意思了，好像要求的k是一个关于n的表达式，n不取1、2可能是这时算出来的k值不能用n>=3算出来的表达式来表示。既然k是关于n的一个表达式，那么题目中又说求所有非负整数k，这样的说法就有点怪怪的，这句话的意思难道是k的表达式还不止一种？你的理解问题很大，n不是构造本身，n只是限定了构造直线的条数，满足条件1的n条直线的构造方式有无数种，在这无数种方式中再找出对应的k，只要有一种方式数出来是k，那么这个k就是满足给定n的解。不是无数种，需要覆盖满足a+b<=n+1的所有点(a,b),虽然这样的构造不是很难，但也不是随随便便就能覆盖的，这里需要讨论点(a,b)的个数和n的关系，好像是一个在直角三角形内的所有点吧？直角边在x轴y轴上。所谓阳光直线就是不和三角形三条边中的任何一条平行。
 
