--- a/text/看书.md
+++ b/text/看书.md
@@ -21,7 +21,7 @@
 
 因为你们的脑容量是我的很多倍，所以批判我或者夸赞我都没什么意思，我这里只是想展示智商不高的人想体验做数学题的思维过程，又不想花时间学数学，那就只能借助ai玩玩高中数学竞赛题了，毕竟以后就算ai做imo满分了，也要从作用和体验两方面体现出来。
 
-关于n条直线的构造，首先我想到的是竖着n条、横着n条、斜着n条，还有吗？接下来没什么想法了。ai是这样构造的，以3条为例，它是横着一条，竖着一条，斜着一条。阳光指不平行，平行不阳光，所以无论横竖斜都是不阳光的，k是指阳光的，所以到现在为止k还是0。怎么会是0呢？以n=3为例，把图画出来，a+b<=4有6个点，比如(1,3)和(2,1)、(1,1)和(2,2)、(1,2)和(3,1)，这样就构造出了满足条件的3条直线，且都是阳光的。n条直线覆盖n*(n+1)/2个点，如果n=3，平均每条直线要覆盖2个点，如果n=4，2.5个点，n=5，3个点。
+关于n条直线的构造，首先我想到的是竖着n条、横着n条、斜着n条，还有吗？接下来没什么想法了。ai是这样构造的，以3条为例，它是横着一条，竖着一条，斜着一条。阳光指不平行，平行不阳光，所以无论横竖斜都是不阳光的，k是指阳光的，所以到现在为止k还是0。怎么会是0呢？以n=3为例，把图画出来，a+b<=4有6个点，比如(1,3)和(2,1)、(1,1)和(2,2)、(1,2)和(3,1)，这样就构造出了满足条件的3条直线，且都是阳光的。n条直线覆盖n\*(n+1)/2个点，如果n=3，平均每条直线要覆盖2个点，如果n=4，2.5个点，n=5，3个点。设m=n\*(n+1)/2，过2点的直线总共有m(m-1)/2，可能有重复，重复的直线会经过多个点。
 
 出现了点意外，不小心看了一眼答案。我发现把做数学题的推理过程写成一篇侦探小说真的挺有意思的，剧透了就不好玩了。
 
