--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,3 +1,12 @@
+
+天天在知乎写，检坚持每天写？为啥粉丝那么少？ - 南行兮的回答 -  <br>
+https://www.zhihu.com/question/1917989066047198560/answer/1929554296732628726
+
+南行兮：
+有苦吃苦，有糖吃糖。记录风俗，理解诗书，把人间味道讲出来。
+我是真的不建议把知乎关注自己的人称为“粉丝”。 知乎根本谈不上粉不粉，这上面的人性格太独立了，思维太成熟了，极少出现无脑喜爱和追捧某个博主的现象。 他们的关注，只代表一定时刻对你的认同和欣赏。甚至有可能只代表对你某一篇文章的肯定。 我窃以为这绝对不能用“粉”来定义，所以一直以来我都是说的“读者”，关注自己的读者。 作为一个在知…阅读全文​
+
+-------
 6 大模型决战高考数学新一卷，豆包和元宝并列第一，OpenAI o3 垫底，如何解读它们的表现？ - theigrams的回答  <br>
 https://www.zhihu.com/question/1915087130696320803/answer/1915219775535191786
 
