--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,3 +1,5 @@
+有没有养女儿或者养儿子的游戏推荐? <br>
+https://www.zhihu.com/question/597632187
 
 天天在知乎写，检坚持每天写？为啥粉丝那么少？ - 南行兮的回答 -  <br>
 https://www.zhihu.com/question/1917989066047198560/answer/1929554296732628726
