--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -9,6 +9,8 @@
 
 10年后如果我还活着，将有幸见证资本主义的自然瓦解。
 
+脱离公司独立生产？一般人没这个需求，最多有一部分喜欢创造的人想要更多的自由度。只能说以后可能一群程序员独立生产的效率大幅超越在公司的组织模式下的生产效率，在客观上导致大部分程序员从公司里脱离出来。
+
 ------
 喜多郎 - 响宴
 
