--- a/text/看书.md
+++ b/text/看书.md
@@ -1,4 +1,28 @@
 
+　　我们主张积极的思想斗争，因为它是达到党内和革命团体内的团结使之利于战斗的武器。每个共产党员和革命分子，应该拿起这个武器。<br>
+　　但是自由主义取消思想斗争，主张无原则的和平，结果是腐朽庸俗的作风发生，使党和革命团体的某些组织和某些个人在政治上腐化起来。<br>
+　　自由主义有各种表现。<br>
+　　因为是熟人、同乡、同学、知心朋友、亲爱者、老同事、老部下，明知不对，也不同他们作原则上的争论，任其下去，求得和平和亲热。或者轻描淡写地说一顿，不作彻底解决，保持一团和气。结果是有害于团体，也有害于个人。这是第一种。<br>
+　　不负责任的背后批评，不是积极地向组织建议。当面不说，背后乱说；开会不说，会后乱说。心目中没有集体生活的原则，只有自由放任。这是第二种。<br>
+　　事不关己，高高挂起；明知不对，少说为佳；明哲保身，但求无过。这是第三种。<br>
+　　命令不服从，个人意见第一。只要组织照顾，不要组织纪律。这是第四种。<br>
+　　不是为了团结，为了进步，为了把事情弄好，向不正确的意见斗争和争论，而是个人攻击，闹意气，泄私愤，图报复。这是第五种。<br>
+　　听了不正确的议论也不争辩，甚至听了反革命分子的话也不报告，泰然处之，行若无事。这是第六种。<br>
+　　见群众不宣传，不鼓动，不演说，不调查，不询问，不关心其痛痒，漠然置之，忘记了自己是一个共产党员，把一个共产党员混同于一个普通的老百姓。这是第七种。<br>
+　　见损害群众利益的行为不愤恨，不劝告，不制止，不解释，听之任之。这是第八种。<br>
+　　办事不认真，无一定计划，无一定方向，敷衍了事，得过且过，做一天和尚撞一天钟。这是第九种。<br>
+　　自以为对革命有功，摆老资格，大事做不来，小事又不做，工作随便，学习松懈。这是第十种。<br>
+　　自己错了，也已经懂得，又不想改正，自己对自己采取自由主义。这是第十一种。<br>
+　　还可以举出一些。主要的有这十一种。<br>
+　　所有这些，都是自由主义的表现。<br>
+　　革命的集体组织中的自由主义是十分有害的。它是一种腐蚀剂，使团结涣散，关系松懈，工作消极，意见分歧。它使革命队伍失掉严密的组织和纪律，政策不能贯彻到底，党的组织和党所领导的群众发生隔离。这是一种严重的恶劣倾向。<br>
+　　自由主义的来源，在于小资产阶级的自私自利性，以个人利益放在第一位，革命利益放在第二位，因此产生思想上、政治上、组织上的自由主义。<br>
+　　自由主义者以抽象的教条看待马克思主义的原则。他们赞成马克思主义，但是不准备实行之，或不准备完全实行之，不准备拿马克思主义代替自己的自由主义。这些人，马克思主义是有的，自由主义也是有的：说的是马克思主义，行的是自由主义；对人是马克思主义，对己是自由主义。两样货色齐备，各有各的用处。这是一部分人的思想方法。<br>
+　　自由主义是机会主义的一种表现，是和马克思主义根本冲突的。它是消极的东西，客观上起着援助敌人的作用，因此敌人是欢迎我们内部保存自由主义的。自由主义的性质如此，革命队伍中不应该保留它的地位。<br>
+　　我们要用马克思主义的积极精神，克服消极的自由主义。一个共产党员，应该是襟怀坦白，忠实，积极，以革命利益为第一生命，以个人利益服从革命利益；无论何时何地，坚持正确的原则，同一切不正确的思想和行为作不疲倦的斗争，用以巩固党的集体生活，巩固党和群众的联系；关心党和群众比关心个人为重，关心他人比关心自己为重。这样才算得一个共产党员。<br>
+　　一切忠诚、坦白、积极、正直的共产党员团结起来，反对一部分人的自由主义的倾向，使他们改变到正确的方面来。这是思想战线的任务之一。
+
+-------
 娱乐一下，先把imo题目输入ai，由ai输出回答，再根据ai的回答由人工进行筛选。我的记忆力和反应力属于人类中下水平，一旦有点压力脑子就会一片空白，只是我自认为我的分析能力还是可以的。如果平时看数学，别人高智商的人一个小时做出来的数学竞赛题目，我可能看答案就要看一星期才能看懂，现在有了ai后应该会快一点。
 
 称坐标平面上的一条直线为阳光的，如果它与 x 轴、y 轴和直线 x+y=0 均不平行。x+y=0的意思是举个简单的例子，x=3，那么y就=-3，x=-3，y就=3。不与 x+y=0平行的意思是，如果x=3，y=7，那么x=5，y不能取5，其实就是这条直线上任意取2点，不能使这2点的x+y相等，比如x+y=10，那么x=5，y就不能使x+y=10。x=3，y=7决定了x+y=10（为什么不是x+2y=17呢？），x+y=10和x=5决定了y=5。不能平行x轴呢？x轴指的是对任意的x，y=0，不能平行就是指这条直线的任意两个点，它们的y不能相同，比如（3，6），（5，6）这两个点的y轴坐标相同，就与x轴平行了。
