--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -1,7 +1,10 @@
 2025年想法：
 
-最新 7.22：
+最新 7.23：
 
+矶村由纪子 - 风居住的街道
+
+------
 个人的实践很简单，只要还有一口气在，并且大脑没有完全被形式逻辑所控制，那么想怎么选择都行。但在没有权力强力驱动和一致的文化认同的前提下，让多数人做出同一个选择，这是不可设想的。就是你不能替多数人设想会做什么或不会做什么，去分析多数人在这个客观环境下发展的趋势这是可以的。
 
 ------
