--- a/text/看书.md
+++ b/text/看书.md
@@ -51,6 +51,8 @@
 
 k的可能取值是0，1，2...n，这个我之前没想过。k指的是n中有几条阳光的，所以k不可能是n+1，假如k真的取到了n+1会发生什么？k取n+1没定义，会发生什么随你怎么说。还有我之前认为k是关于n的表达式这个思路也是错的，k还可以是由n约束的一个集合。有个问题，n条直线，n-1条把所有点都覆盖了，还剩一条没经过任何一个点，这样是算n还是n-1？要求k，只能算n，如果n条不覆盖，需要n+1条才覆盖，那么k的条件1就不满足，如果n-1条满足了，剩下的这条不管在哪里都是满足条件的，但最后算k的时候这条直线阳不阳光会决定k值大小。n也要分类，不同的n值可能k的取值集合是不一样的，我怎么感觉5条阳光的直线覆盖不了15个点，平行的直线一次性可以覆盖5个点，不平行的也就是稍微斜一点一次可以覆盖5/2+1=3个点，找到3条，覆盖了9个点，剩下2条覆盖不了6个点。
 
+n条可以覆盖三角形，那么2n条必定能覆盖正方形，2n条能覆盖正方形，n条不一定能覆盖三角形，因为有些直线可能覆盖2个三角形的点，2n条覆盖不了正方形，那么n条必定覆盖不了三角形。这个感觉没什么用。
+
 ------
 晴雯在旁哭着，方欲说话，只见林黛玉进来，便出去了。林黛玉笑道：“大节下怎么了？好好的哭起来。难道是为争粽子吃争恼了不成？”宝玉和袭人嗤的一笑。林黛玉道：“二哥哥不告诉我，我问你就知道了。”一面说，一面靠着袭人的肩膀道：“好嫂子，你告诉我。必定是你们两个拌了嘴了。告诉妹妹，替你们和劝和劝。”袭人推他道：“林姑娘你闹什么？我们一个丫头家，姑娘只是混说。”黛玉笑道：“你说你是个丫头，我只拿你当嫂子待。”宝玉道：“你何苦来！替他招骂名儿。饶这么着，还有人说闲话，还搁的住你来说他。”袭人笑道：“林姑娘，你不知道我的心事，除非这一口气不来死了倒也罢了。”林黛玉笑道：“你死了，别人不知怎么样，我先就哭死了。”宝玉笑道：“你死了，我作和尚去。”袭人笑道：“你老实些罢，何苦来还说这些话。”林黛玉将两个指头一伸，抿嘴笑道：“作了两个和尚了。我从今以后都记着你作和尚的遭数儿。”宝玉听了，知道是他点前儿的话，自己一笑也就罢了。
 
