--- a/text/看书.md
+++ b/text/看书.md
@@ -51,9 +51,11 @@
 
 k的可能取值是0，1，2...n，这个我之前没想过。k指的是n中有几条阳光的，所以k不可能是n+1，假如k真的取到了n+1会发生什么？k取n+1没定义，会发生什么随你怎么说。还有我之前认为k是关于n的表达式这个思路也是错的，k还可以是由n约束的一个集合。有个问题，n条直线，n-1条把所有点都覆盖了，还剩一条没经过任何一个点，这样是算n还是n-1？要求k，只能算n，如果n条不覆盖，需要n+1条才覆盖，那么k的条件1就不满足，如果n-1条满足了，剩下的这条不管在哪里都是满足条件的，但最后算k的时候这条直线阳不阳光会决定k值大小。n也要分类，不同的n值可能k的取值集合是不一样的，我怎么感觉5条阳光的直线覆盖不了15个点，平行的直线一次性可以覆盖5个点，不平行的也就是稍微斜一点一次可以覆盖5/2+1=3个点，找到3条，覆盖了9个点，剩下2条覆盖不了6个点。
 
-n条可以覆盖三角形，那么2n条必定能覆盖正方形，2n条能覆盖正方形，n条不一定能覆盖三角形，因为有些直线可能覆盖2个三角形的点，2n条覆盖不了正方形，那么n条必定覆盖不了三角形。这个感觉没什么用。接下来没什么想法，感觉还是需要把直线放在每个点上然后旋转360度，细致的分析斜率情况，总结出一些规律，可能怎么划分三角形进行分类比较关键。我想到一些规律，也不知道有用没用，第一层是顶点，第二层有两个点和顶点相连分别经过直角边和斜边，第三层有三个点，中间那个点和顶点相连的斜率是1/2，而第三层中间这个点和第四层中间那两个点相连斜率是0和1，这两个点都不能被1/2那条直线穿过。先分析k=n条阳光直线能不能覆盖三角形也就是n\*(n+1)/2个点，这里又有一个漏掉的问题，你下了一个不能覆盖的结论，你怎么自证你的构造没有漏掉呢？说不定别人刚好想出一个在你思维盲区之外的构造把所有点都覆盖了呢？因为点是有限的，所以穿过点的所有直线也是有限的，肯定可以遍历完所有情况，但n又不是一个定值，你遍历了n=一万的情况，又需要把n=1百万的情况再遍历一遍，再多一点n=一百万亿计算机恐怕也很难快速遍历出结果，所以我的想法是能不能把这无限个点（n条阳光直线的构造）划分成数量相对较少的一些特征集合，只要遍历所有这些特征就能保证无遗漏，之所以可以这样做是因为每个特征集合中的所有点元素对外关系都是一样的，只依赖这个集合的特征，而不依赖每个点元素的其他特征。
+n条可以覆盖三角形，那么2n条必定能覆盖正方形，2n条能覆盖正方形，n条不一定能覆盖三角形，因为有些直线可能覆盖2个三角形的点，2n条覆盖不了正方形，那么n条必定覆盖不了三角形。这个感觉没什么用。接下来没什么想法，感觉还是需要把直线放在每个点上然后旋转360度，细致的分析斜率情况，总结出一些规律，可能怎么划分三角形进行分类比较关键。我想到一些规律，也不知道有用没用，第一层是顶点，第二层有两个点和顶点相连分别经过直角边和斜边，第三层有三个点，中间那个点和顶点相连的斜率是1/2，而第三层中间这个点和第四层中间那两个点相连斜率是0和1，这两个点都不能被1/2那条直线穿过。我发现第三层3个点和顶点组成3条斜率各不相同的直线，第4层的4个点使由三条直线构成的量角器的刻度变得更加精细。
 
-说说我的解题理念，我反对用解析几何暴力运算证明一道题，也不赞成凭空想出一个普通人很难想出来的高超技巧，我最欣赏的是用最朴素的符合普通低智商的人（只要不是弱智就行）直觉的思想，一点一点慢慢分析出最令人惊叹的高超技巧。
+先分析k=n条阳光直线能不能覆盖三角形也就是n\*(n+1)/2个点，这里又有一个漏掉的问题，你下了一个不能覆盖的结论，你怎么自证你的构造没有漏掉呢？说不定别人刚好想出一个在你思维盲区之外的构造把所有点都覆盖了呢？因为点是有限的，所以穿过点的所有直线也是有限的，肯定可以遍历完所有情况，但n又不是一个定值，你遍历了n=一万的情况，又需要把n=1百万的情况再遍历一遍，再多一点n=一百万亿计算机恐怕也很难快速遍历出结果，所以我的想法是能不能把这无限个点（n条阳光直线的构造）划分成数量相对较少的一些特征集合，只要遍历所有这些特征就能保证无遗漏，之所以可以这样做是因为每个特征集合中的所有点元素对外关系都是一样的，只依赖这个集合的特征，而不依赖每个点元素的其他特征。
+
+说说我的解题理念，我反对用解析几何暴力运算证明一道题，也不赞成凭空想出一个普通人很难想出来的高超技巧，我最欣赏的是用最朴素的符合普通低智商的人（只要不是弱智就行）直觉的思想，一点一点慢慢分析出最高深的技巧。一点一点分析出来的技巧，不会让人惊叹，只有横空出世才会让人惊叹，但前者已经包含了后者，只要把中间的分析过程隐去就行了，说我就是凭天才的直觉想出来的，故意说因为我是天才所以我不会走弯路不会犯错误能瞬间洞察世界上的一切规律。
 
 ------
 晴雯在旁哭着，方欲说话，只见林黛玉进来，便出去了。林黛玉笑道：“大节下怎么了？好好的哭起来。难道是为争粽子吃争恼了不成？”宝玉和袭人嗤的一笑。林黛玉道：“二哥哥不告诉我，我问你就知道了。”一面说，一面靠着袭人的肩膀道：“好嫂子，你告诉我。必定是你们两个拌了嘴了。告诉妹妹，替你们和劝和劝。”袭人推他道：“林姑娘你闹什么？我们一个丫头家，姑娘只是混说。”黛玉笑道：“你说你是个丫头，我只拿你当嫂子待。”宝玉道：“你何苦来！替他招骂名儿。饶这么着，还有人说闲话，还搁的住你来说他。”袭人笑道：“林姑娘，你不知道我的心事，除非这一口气不来死了倒也罢了。”林黛玉笑道：“你死了，别人不知怎么样，我先就哭死了。”宝玉笑道：“你死了，我作和尚去。”袭人笑道：“你老实些罢，何苦来还说这些话。”林黛玉将两个指头一伸，抿嘴笑道：“作了两个和尚了。我从今以后都记着你作和尚的遭数儿。”宝玉听了，知道是他点前儿的话，自己一笑也就罢了。
