--- a/text/看书.md
+++ b/text/看书.md
@@ -55,7 +55,7 @@ n条可以覆盖三角形，那么2n条必定能覆盖正方形，2n条能覆盖
 
 先分析k=n条阳光直线能不能覆盖三角形也就是n\*(n+1)/2个点，这里又有一个漏掉的问题，你下了一个不能覆盖的结论，你怎么自证你的构造没有漏掉呢？说不定别人刚好想出一个在你思维盲区之外的构造把所有点都覆盖了呢？因为点是有限的，所以穿过点的所有直线也是有限的，肯定可以遍历完所有情况，但n又不是一个定值，你遍历了n=一万的情况，又需要把n=1百万的情况再遍历一遍，再多一点n=一百万亿计算机恐怕也很难快速遍历出结果，所以我的想法是能不能把这无限个点（n条阳光直线的构造）划分成数量相对较少的一些特征集合，只要遍历所有这些特征就能保证无遗漏，之所以可以这样做是因为每个特征集合中的所有点元素对外关系都是一样的，只依赖这个集合的特征，而不依赖每个点元素的其他特征。
 
-说说我的解题理念，我反对用解析几何暴力运算证明一道题，也不赞成凭空想出一个普通人很难想出来的高超技巧，我最欣赏的是用最朴素的符合普通低智商的人（只要不是弱智就行）直觉的思想，一点一点慢慢分析出最高深的技巧。一点一点分析出来的技巧，不会让人惊叹，只有横空出世才会让人惊叹，但前者已经包含了后者，只要把中间的分析过程隐去就行了，说我就是凭天才的直觉想出来的，故意说因为我是天才所以我不会走弯路不会犯错误能瞬间洞察世界上的一切规律。
+说说我的解题理念，我反对用解析几何暴力运算证明一道题，也不赞成凭空想出一个普通人很难想出来的高超技巧，我最欣赏的是用最朴素的符合普通低智商的人（只要不是弱智就行）直觉的思想，一点一点慢慢分析出最高深的技巧。一点一点分析出来的技巧，不会让人惊叹，只有横空出世才会让人惊叹，但前者已经包含了后者，只要把中间的分析过程隐去就行了，说我就是凭天才的直觉想出来的，故意说因为我是天才所以我不会走弯路不会犯错误能洞察世界上的一切规律。看来伪装天才和真正的天才还是有差距的，分析是要花很多时间的，天才是可以做到瞬间洞察的，时间上的差距就是天才和伪天才的区别，就好比你走路可以到达一个地方，别人光速也可以到一个地方，都是到达一个地方，结果相同，但走路比光速要慢太多了，在光速面前蜗牛爬行已经不能用来形容走路有多慢了。
 
 ------
 晴雯在旁哭着，方欲说话，只见林黛玉进来，便出去了。林黛玉笑道：“大节下怎么了？好好的哭起来。难道是为争粽子吃争恼了不成？”宝玉和袭人嗤的一笑。林黛玉道：“二哥哥不告诉我，我问你就知道了。”一面说，一面靠着袭人的肩膀道：“好嫂子，你告诉我。必定是你们两个拌了嘴了。告诉妹妹，替你们和劝和劝。”袭人推他道：“林姑娘你闹什么？我们一个丫头家，姑娘只是混说。”黛玉笑道：“你说你是个丫头，我只拿你当嫂子待。”宝玉道：“你何苦来！替他招骂名儿。饶这么着，还有人说闲话，还搁的住你来说他。”袭人笑道：“林姑娘，你不知道我的心事，除非这一口气不来死了倒也罢了。”林黛玉笑道：“你死了，别人不知怎么样，我先就哭死了。”宝玉笑道：“你死了，我作和尚去。”袭人笑道：“你老实些罢，何苦来还说这些话。”林黛玉将两个指头一伸，抿嘴笑道：“作了两个和尚了。我从今以后都记着你作和尚的遭数儿。”宝玉听了，知道是他点前儿的话，自己一笑也就罢了。
