--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -1,7 +1,10 @@
 2025年想法：
 
-最新 7.23：
+最新 7.24：
 
+人类的阅卷是需要时间的，而且还需要智商相对较高的人来评分，这是一个巨大的人类脑力资源投入。对于棋类ai来说，最低级的ai也会判断输赢。所以对现在的数学ai来说，ai做题能力的强弱并不是最高优先级，当务之急是ai必须要能精确判断自己做题的对错。像我这样一个智商不高的人，虽然ai做数学题能秒杀我，但我感觉ai对做题对错的判断还是不如我。就算参加imo的那些连铜牌都拿不到的人，一道题自己有没有做出来应该是不会判断出错的吧，看别人的答案有没有做出来应该也是能判断出来的吧，可能参赛选手自己答题中有些失误和盲区需要阅卷人评判。
+
+-----
 矶村由纪子 - 风居住的街道
 
 ------
