--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -37,6 +37,11 @@ https://zhuanlan.zhihu.com/p/1930219198312850486
 
 段小草：在缺乏统一、受控的测试标准下，讨论 AI 的「金牌」成绩，可能毫无意义。他同时明确表示，自己 不会对任何没有在赛前披露评测方法的 AI 竞赛成绩发表评论。陶哲...阅读全文​
 
+谷歌 Gemini 高级版在 IMO 2025 中获得金牌，该模型在 AI 应用中的优势是什么？  <br>
+https://www.zhihu.com/question/1930961113593394228
+
+谷歌DeepMind宣布其高级版Gemini模型在2025年国际数学奥林匹克竞赛中，以解出5题、总分35分的成绩达到金牌标准。该成绩获IMO官方协调员认证，解题过程在4.5小时内完成，并全程使用自然语言进行端到端推理。
+
 如何看OpenAI研究人员宣布他们的内部实验模型获得了国际数学奥赛2025的金牌？ - 乔卡伊桑OvO的回答 <br>
 https://www.zhihu.com/question/1929974654866527480/answer/1930102898844481402
 
