--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -2,6 +2,9 @@
 
 最新 7.24：
 
+我突然悟出了一个道理，追求正义和创新是需要承担风险的，想明哲保身要么就放弃正义和创新。但事物总是会走向反面的，你放弃后并不能保证你的绝对安全，只是形式逻辑告诉你，这很安全。这个世界一直都是处在辩证法和形式逻辑的激烈博弈之中，没有哪一方是绝对占据优势的。
+
+------
 人类的阅卷是需要时间的，而且还需要智商相对较高的人来评分，这是一个巨大的人类脑力资源投入。对于棋类ai来说，最低级的ai也会判断输赢。所以对现在的数学ai来说，ai做题能力的强弱并不是最高优先级，当务之急是ai必须要能精确判断自己做题的对错。像我这样一个智商不高的人，虽然ai做数学题能秒杀我，但我感觉ai对做题对错的判断还是不如我。就算参加imo的那些连铜牌都拿不到的人，一道题自己有没有做出来应该是不会判断出错的吧，看别人的答案有没有做出来应该也是能判断出来的吧，可能参赛选手自己答题中有些失误和盲区需要阅卷人来评判。
 
 -----
@@ -238,6 +241,26 @@ https://5sing.kugou.com/bz/2007164.html
 什么时候需要多维排序？
 
 -------
+[AI修复]93版《包青天》主题曲  <br>
+https://www.bilibili.com/video/BV1Ay4y1u76w/
+
+作词：孙仪
+作曲：杨秉忠
+
+开封有个包青天 <br>
+铁面无私辨忠奸 <br>
+江湖豪杰来相助 <br>
+王朝和马汉在身边 <br>
+钻天鼠身轻如燕 <br>
+彻地鼠是条好汉 <br>
+穿山老鼠铁臂神拳 <br>
+翻江鼠身手不凡 <br>
+锦毛鼠一身是胆 <br>
+这五鼠义结金兰 <br>
+七侠和五义 <br>
+留传在民间
+
+------
 Larry Wolff - Face Of The Enemy
 
 【张卫健】江湖小子结尾片段 <br>
