--- a/text/歌词.md
+++ b/text/歌词.md
@@ -6,26 +6,15 @@
 
 词曲：张毅
 
-秋的眼<br>
-秋的眉<br>
-秋的水<br>
-轻轻的风<br>
-随落花四处纷飞<br>
-黄的花<br>
-黄的朵<br>
-黄的蕊<br>
+秋的眼 秋的眉 秋的水<br>
+轻轻的风 随落花四处纷飞<br>
+黄的花 黄的朵 黄的蕊<br>
 亲爱的人我多想一生把你陪<br>
 
-你的眼<br>
-你的泪<br>
-你的美<br>
-忧伤的夜<br>
-就象那浓浓的咖啡<br>
-我的梦<br>
-我的情<br>
-我的悲<br>
-亲爱的人<br>
-我多想一生把你陪<br>
+你的眼 你的泪 你的美<br>
+忧伤的夜 就象那浓浓的咖啡<br>
+我的梦 我的情 我的悲<br>
+亲爱的人我多想一生把你陪<br>
 
 爱情的感伤<br>
 不一定是心碎<br>
@@ -37,10 +26,10 @@
 就算痛到心碎<br>
 也要走出包围<br>
 
-**太在意收获** <br>
-**就会失去那种美** <br>
-就算不停去追 <br>
-人生也没有完美 <br>
+太在意收获 <br>
+就会失去那种美 <br>
+**就算不停去追** <br>
+**人生也没有完美** <br>
 
 爱不在就放手<br>
 别变成负累<br>
