--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -253,7 +253,7 @@ https://www.bilibili.com/video/BV1Ay4y1u76w/
 王朝和马汉在身边 <br>
 钻天鼠身轻如燕 <br>
 彻地鼠是条好汉 <br>
-穿山老鼠铁臂神拳 <br>
+穿山鼠铁臂神拳 <br>
 翻江鼠身手不凡 <br>
 锦毛鼠一身是胆 <br>
 这五鼠义结金兰 <br>
