--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -1,7 +1,37 @@
 2025年想法：
 
-最新 7.24：
+最新 7.25：
 
+许茹芸 - 独角戏
+
+作词: 许常德
+作曲: 季忠平
+
+是谁导演这场戏<br>
+在这孤单角色里<br>
+对白总是自言自语<br>
+对手都是回忆 <br>
+看不出什么结局<br>
+
+自始至终全是你<br>
+让我投入太彻底<br>
+故事如果注定悲剧<br>
+何苦给我美丽 <br>
+演出相聚和别离<br>
+
+没有星星的夜里<br>
+我用泪光吸引你<br>
+既然爱你不能言语<br>
+只能微笑哭泣 <br>
+让我从此忘了你<br>
+
+没有星星的夜里<br>
+我把往事留给你<br>
+如果一切只是演戏<br>
+要你好好看戏<br>
+心碎只是我自己<br>
+
+----------
 我突然悟出了一个道理，追求正义和创新是需要承担风险的，想明哲保身要么就放弃正义和创新。但事物总是会走向反面的，你放弃后并不能保证你的绝对安全，只是形式逻辑告诉你，这很安全。这个世界一直都是处在辩证法和形式逻辑的激烈博弈之中，没有哪一方是绝对占据优势的。
 
 ------
