--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,4 +1,9 @@
+毛泽东：“这么多领导干部，懂唯物辩证法的有几个？” - 贯芝先生的文章 - <br>
+https://zhuanlan.zhihu.com/p/661756765
 
+毛主席：雷锋的日记我看了。他是懂得一点哲学的。他的日记中，有许多很好的辩证法的观点和语言。比那些死读哲学书的大学生的论文强多了。他的哲学思想是从哪里来的？还不是从为人民服务的丰富多彩的具体实践中来的。他为群众办了那么多好事嘛！这一点是那些死读哲学书的大学生所无法比拟的 。
+
+------
 有没有养女儿或者养儿子的游戏推荐? <br>
 https://www.zhihu.com/question/597632187
 
