--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -2,6 +2,9 @@
 
 最新 7.25：
 
+对于卧龙生小说中这种典型男频yy女主，比如白惜香和梅绛雪，其实我不是很喜欢，就算喜欢也不能公开说出来，因为太假了，脱离客观实际，现实中不可能有智商正常的女生会这么做。另一方面李红袖和小兰这样的角色也很yy，也很假，但是现实中的女生说她们不会像李红袖和小兰那样做是没什么意义的，因为做不到，装都很难装。李红袖和小兰你说她们两个是装的吗？好像又是自然的。你说她们两个是自然的好像又是装的。
+
+------
 许茹芸 - 独角戏
 
 作词: 许常德
