--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,4 +1,9 @@
-毛泽东：“这么多领导干部，懂唯物辩证法的有几个？” - 贯芝先生的文章 - <br>
+6名大学生溺亡后续：遇难者家属陆续发声，业内分析坠落原因！<br>
+https://weibo.com/tv/show/1034:5192230722273367?from=old_pc_videoshow
+
+逆行的攻德心:这种重工业每年都有死亡名额，没超过名额就不算重大事故，我刚毕业就在一个钢铁厂工作，在下面检查的时候，上面的人没看到，就拉闸，水就下来了，还好我反应快，直接翻上来了，不然也没了，然后立马就辞职了[捂嘴哭][捂嘴哭][捂嘴哭]
+
+毛泽东：“这么多领导干部，懂唯物辩证法的有几个？” - 贯芝先生的文章  <br>
 https://zhuanlan.zhihu.com/p/661756765
 
 毛主席：雷锋的日记我看了。他是懂得一点哲学的。他的日记中，有许多很好的辩证法的观点和语言。比那些死读哲学书的大学生的论文强多了。他的哲学思想是从哪里来的？还不是从为人民服务的丰富多彩的具体实践中来的。他为群众办了那么多好事嘛！这一点是那些死读哲学书的大学生所无法比拟的 。
