--- a/text/歌词.md
+++ b/text/歌词.md
@@ -1,7 +1,64 @@
 2025年：以歌词为主，也包含一些古诗词
 
-最新 7.24
+最新 7.25
 
+梁静茹 - 会呼吸的痛
+
+作词: 姚若龙
+作曲: 宇珩
+编曲: 安栋
+
+在东京铁塔<br>
+第一次眺望<br>
+看灯火模仿<br>
+坠落的星光<br>
+我终于到达<br>
+但却更悲伤<br>
+一个人完成<br>
+我们的梦想<br>
+你总说时间还很多<br>
+你可以等我<br>
+以前我不懂得<br>
+未必明天就有以后<br>
+
+想念是会呼吸的痛<br>
+它活在我身上所有角落<br>
+哼你爱的歌会痛<br>
+看你的信会痛<br>
+连沉默也痛<br>
+遗憾是会呼吸的痛<br>
+它流在血液中来回滚动<br>
+后悔不贴心会痛<br>
+恨不懂你会痛<br>
+想见不能见最痛<br>
+
+没看你脸上<br>
+张扬过哀伤<br>
+那是种多么<br>
+寂寞的倔强<br>
+你拆了城墙<br>
+让我去流浪<br>
+在原地等我<br>
+把自己捆绑<br>
+你没说你也会软弱<br>
+需要依赖我<br>
+我就装不晓得<br>
+自由移动 自我地过<br>
+
+我发誓不再说谎了<br>
+多爱你就会抱你多紧的<br>
+我的微笑都假了<br>
+灵魂像飘浮着<br>
+你在就好了<br>
+我发誓不让你等候<br>
+陪你做想做的无论什么<br>
+我越来越像贝壳<br>
+怕心被人触碰<br>
+你回来那就好了<br>
+能重来<br>
+那就好了
+
+-------
 乌兰托娅 - 爱不在就放手<br>
 
 词曲：张毅
