--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -2,6 +2,11 @@
 
 最新 7.25：
 
+为什么共产党会打出“全心全意为人民服务”的口号？因为有国民党的衬托和人民的拥护，这样做有很大的好处。
+
+毛主席：“我们的这种态度是不是功利主义的？唯物主义者并不一般地反对功利主义，但是反对封建阶级的、资产阶级的、小资产阶级的功利主义，反对那种口头上反对功利主义、实际上抱着最自私最短视的功利主义的伪善者。世界上没有什么超功利主义，在阶级社会里，不是这一阶级的功利主义，就是那一阶级的功利主义。我们是无产阶级的革命的功利主义者，我们是以占全人口百分之九十以上的最广大群众的目前利益和将来利益的统一为出发点的，所以我们是以最广和最远为目标的革命的功利主义者，而不是只看到局部和目前的狭隘的功利主义者。”
+
+------
 对于卧龙生小说中这种典型男频yy女主，比如白惜香和梅绛雪，其实我不是很喜欢，就算喜欢也不能公开说出来，因为太假了，脱离客观实际，现实中不可能有智商正常的女生会这么做。另一方面李红袖和小兰这样的角色也很yy，也很假，但是现实中的女生说她们不会像李红袖和小兰那样做是没什么意义的，因为做不到，装都很难装。李红袖和小兰你说她们两个是装的吗？好像又是自然的。你说她们两个是自然的好像又是装的。
 
 ------
