--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -2,6 +2,9 @@
 
 最新 7.25：
 
+日出东方第4集28分38秒：你想把他赶到哪个省啊 可千万别把他赶到我们河北来呀 
+
+------
 为什么共产党会打出“全心全意为人民服务”的口号？因为有国民党的衬托和人民的拥护，这样做有很大的好处。
 
 毛主席：“我们的这种态度是不是功利主义的？唯物主义者并不一般地反对功利主义，但是反对封建阶级的、资产阶级的、小资产阶级的功利主义，反对那种口头上反对功利主义、实际上抱着最自私最短视的功利主义的伪善者。世界上没有什么超功利主义，在阶级社会里，不是这一阶级的功利主义，就是那一阶级的功利主义。我们是无产阶级的革命的功利主义者，我们是以占全人口百分之九十以上的最广大群众的目前利益和将来利益的统一为出发点的，所以我们是以最广和最远为目标的革命的功利主义者，而不是只看到局部和目前的狭隘的功利主义者。”
