--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,4 +1,11 @@
 
+分析和拓扑的关系到底有多大？ - Singular的回答 <br>
+https://www.zhihu.com/question/557601494/answer/1932498729472071644
+
+Singular：
+如果拓扑是指“点集拓扑”，那点集拓扑的确是辅助描述分析的一种工具. 比如要想理解一些映射/算子的行为，那很重要的一点就是理解他们的“拓扑行为”——这是理解分析的直观方式，而不再是依赖古老的“函数图像”. 比如连续函数 ，他的拓扑刻画就是开集的原像是
+
+-----
 6名大学生溺亡后续：遇难者家属陆续发声，业内分析坠落原因！<br>
 https://weibo.com/tv/show/1034:5192230722273367?from=old_pc_videoshow
 
