--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -1,7 +1,10 @@
 2025年想法：
 
-最新 7.25：
+最新 7.26：
 
+任何领域，**只要投入巨大的资源**，人做的ai想要打败人类都是迟早的事。可惜的是，人会做ai，而ai不会做ai，目前也没有迹象表明人会做出一个会做ai的ai。
+
+------
 日出东方第4集28分38秒：你想把他赶到哪个省啊 可千万别把他赶到我们河北来呀 
 
 ------
