--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -2,6 +2,13 @@
 
 最新 7.26：
 
+对代码进行逻辑判定，初始<r，**下次的输入是上次的输出**，上一次<r，更新后也<r，那就一直小于r。
+
+一般来说理论和实践不符，是理论出现了错误。但上面这种情况，如果计算机的运行结果出现了>r，那么是计算机运行出错了，而不会是理论出错。
+
+就是说理论和实践不一致时有时是理论对有时是实践对，那么到底是谁决定了是理论对还是实践对？是皇帝还是真理？
+
+------
 任何领域，**只要投入巨大的资源**，人做的ai想要打败人类都是迟早的事。可惜的是，人会做ai，而ai不会做ai，目前也没有迹象表明人会做出一个会做ai的ai。
 
 ------
