--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -1,12 +1,17 @@
 2025年想法：
 
-最新 7.26：
+最新 7.27：
 
+我不是搞哲学的，也不是搞ai的，我研究的是agi哲学，这个领域好像还没有官科，所以也就不存在民科。
+
+------
 对代码进行逻辑判定，初始<r，**下次的输入是上次的输出**，上一次<r，更新后也<r，那就一直小于r。
 
 一般来说理论和实践不符，是理论出现了错误。但上面这种情况，如果计算机的运行结果出现了>r，那么是计算机运行出错了，而不会是理论出错。
 
 就是说理论和实践不一致时有时是理论对有时是实践对，那么到底是谁决定了是理论对还是实践对？是皇帝还是真理？
+
+自然->人->计算机，计算机是人制造的工具，计算机不会做判断，人和计算机不一致时，需要根据人的思想观念重新做判断，是人记错了还是代码写错了，人的观念来源于自然。既然计算机是人制造的工具，为什么还会出现人和计算机不一致？人的大脑是有两种运行模式的，一种依赖于记忆反应直觉等本能无意识的快速判断，一种依赖于辩证法的深度分析，速度很慢，主要用来处理各种矛盾。我看到deepseek等很多大模型都有深度思考模式，看来深度思考这个词也被人占用了，现在就只剩下深度分析这一个词可以给我用了。
 
 ------
 任何领域，**只要投入巨大的资源**，人做的ai想要打败人类都是迟早的事。可惜的是，人会做ai，而ai不会做ai，目前也没有迹象表明人会做出一个会做ai的ai。
