--- a/text/歌词.md
+++ b/text/歌词.md
@@ -1,7 +1,85 @@
 2025年：以歌词为主，也包含一些古诗词
 
-最新 7.25
+最新 7.27
 
+刘若英 - 后来
+
+作词: 施人诚
+作曲: 玉城千春<br>
+编曲: 王继康
+制作人: 光良
+
+后来 我总算学会了如何去爱<br>
+可惜你 早已远去 消失在人海<br>
+后来 终于在眼泪中明白<br>
+有些人 一旦错过就不在
+
+栀子花 白花瓣<br>
+落在我蓝色百褶裙上<br>
+爱你 你轻声说<br>
+我低下头 闻见一阵芬芳<br>
+那个永恒的夜晚<br>
+十七岁仲夏<br>
+你吻我的那个夜晚<br>
+让我往后的时光<br>
+每当有感叹<br>
+总想起当天的星光<br>
+那时候的爱情<br>
+为什么就能那样简单<br>
+而又是为什么 人年少时<br>
+一定要让深爱的人受伤<br>
+在这相似的深夜里<br>
+你是否一样 也在静静追悔感伤<br>
+如果当时我们能<br>
+不那么倔强<br>
+现在也 不那么遗憾
+
+你都如何回忆我<br>
+带着笑或是很沉默<br>
+这些年来<br>
+有没有人能让你不寂寞
+
+永远不会再重来<br>
+有一个男孩爱着那个女孩
+
+------
+许巍 - 曾经的你
+
+词曲：许巍
+编曲: 李延亮
+
+曾梦想仗剑走天涯<br>
+看一看世界的繁华<br>
+年少的心总有些轻狂<br>
+如今你四海为家<br>
+曾让你心疼的姑娘<br>
+如今已悄然无踪影<br>
+爱情总让你渴望又感到烦恼<br>
+曾让你遍体鳞伤<br>
+DiLiLi……<br>
+走在勇往直前的路上<br>
+DiLiLi……<br>
+有难过也有精彩<br>
+
+每一次难过的时候<br>
+就独自看一看大海<br>
+总想起身边走在路上的朋友<br>
+有多少正在疗伤<br>
+DiLiLi……<br>
+不知多少孤独的夜晚<br>
+DiLiLi……<br>
+从昨夜酒醉醒来
+
+每一次难过的时候<br>
+就独自看一看大海<br>
+总想起身边走在路上的朋友<br>
+有多少正在醒来<br>
+让我们干了这杯酒<br>
+好男儿胸怀像大海<br>
+经历了人生百态世间的冷暖<br>
+这笑容温暖纯真
+
+------
 梁静茹 - 会呼吸的痛
 
 作词: 姚若龙
