--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -11,7 +11,7 @@
 
 就是说理论和实践不一致时有时是理论对有时是实践对，那么到底是谁决定了是理论对还是实践对？是皇帝还是真理？
 
-自然->人->计算机，计算机是人制造的工具，计算机不会做判断，人和计算机不一致时，需要根据人的思想观念重新做判断，是人记错了还是代码写错了，人的观念来源于自然。既然计算机是人制造的工具，为什么还会出现人和计算机不一致？人的大脑是有两种运行模式的，一种依赖于记忆反应直觉等本能无意识的快速判断，一种依赖于辩证法的深度分析，速度很慢，主要用来处理各种矛盾。我看到deepseek等很多大模型都有深度思考模式，看来深度思考这个词也被人占用了，现在就只剩下深度分析这一个词可以给我用了。
+自然->人->计算机，计算机是人制造的工具，计算机不会做判断，人和计算机不一致时，需要根据人的思想观念重新做判断，是人记错了还是代码写错了，人的观念来源于自然。既然计算机是人制造的工具，为什么还会出现人和计算机不一致？人的大脑是有两种运行模式的，一种依赖于记忆反应直觉等本能无意识的快速判断，一种依赖于辩证法的深度分析，速度很慢，主要用来处理各种自相矛盾的结论。我看到deepseek等很多大模型都有深度思考模式，看来深度思考这个词也被人占用了，现在就只剩下深度分析这一个词可以给我用了。
 
 ------
 任何领域，**只要投入巨大的资源**，人做的ai想要打败人类都是迟早的事。可惜的是，人会做ai，而ai不会做ai，目前也没有迹象表明人会做出一个会做ai的ai。
