--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -1,7 +1,10 @@
 2025年想法：
 
-最新 7.27：
+最新 7.28：
 
+小情绪可以作为调味剂点缀一下单调乏味的生活，但是不能让小情绪成为一个人的标签，前50集的小兰在这一点上就把控的非常好，后面我没看过。
+
+------
 我不是搞哲学的，也不是搞ai的，我研究的是agi哲学，这个领域好像还没有官科，所以也就不存在民科。
 
 ------
