--- a/text/歌词.md
+++ b/text/歌词.md
@@ -1,7 +1,47 @@
 2025年：以歌词为主，也包含一些古诗词
 
-最新 7.27
+最新 7.28
 
+周华健/齐豫 - 神话情话
+
+作词: 林夕
+作曲: 周华健
+编曲: 洪敬尧
+
+爱是愉快是难过是陶醉是情绪<br>
+或在日后视作传奇<br>
+爱是盟约是习惯是时间是白发<br>
+也叫你我乍惊乍喜<br>
+完全遗忘自己<br>
+竟可相许生与死<br>
+来日谁来问起<br>
+天高风急双双远飞
+
+爱是微笑是狂笑是傻笑是玩笑<br>
+或是为着害怕寂寥<br>
+爱是何价是何故在何世<br>
+又何以对这世界雪中送火<br>
+谁还祈求什么<br>
+可歌可泣的结果<br>
+谁能承受后果<br>
+翻天覆海不枉最初<br>
+啊……<br>
+有你有我雪中送火
+
+爱在迷迷糊糊<br>
+盘古初开便开始<br>
+这浪浪漫漫旧故事<br>
+爱在朦朦胧胧<br>
+前生今生和他生<br>
+怕错过了也不会知<br>
+跌落茫茫红尘<br>
+南北西东亦相依<br>
+怕独自活着没意义<br>
+爱是来来回回<br>
+情丝一丝又一丝<br>
+至你与我此生永不阔别时
+
+------
 刘若英 - 后来
 
 作词: 施人诚
