--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -1,7 +1,40 @@
 2025年想法：
 
-最新 7.28：
+最新 7.29：
 
+【ZARD（1080p）】坂井泉水－不思议ね…「不可思议啊」<br> 
+https://www.bilibili.com/video/BV1C7411D7Hn/
+
+詞：坂井泉水
+曲：織田哲郎
+
+夏季的风轻吻着我的肌肤<br> 
+流逝的街景<br> 
+正当我流连于擦身而过的景色时<br> 
+听见了让我世界崩塌的话“再见”<br> 
+啊 时间将会改变一切<br> 
+这少年的眼眸 一直无法忘怀<br> 
+不可思议啊 记忆就像掏空了似的<br> 
+就让那颗受伤的心 悄悄地沉睡在 <br> 
+in your dream
+
+南国的风温柔地细语着<br> 
+充满美好回的那个时候<br> 
+我总是在一旁看着你那漠不关心的模样<br> 
+从此以后 就觉着离你好远<br> 
+啊 时间将会改变一切<br> 
+不言而喻的悲伤已是过眼云烟<br> 
+不可思议啊 记忆就像掏空了似的<br> 
+就让那颗受伤的心 悄悄地沉睡在 <br> 
+in my dream
+
+啊 时间将会改变一切<br> 
+不想被心酸的回忆所束缚<br> 
+不可思议啊 记忆就像掏空了似的<br> 
+就让那颗受伤的心 悄悄地沉睡在 <br> 
+in my dream
+
+------
 小情绪可以作为调味剂点缀一下单调乏味的生活，但是不能让小情绪成为一个人的标签，前50集的小兰在这一点上就把控的非常好，后面我没看过。
 
 ------
