--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,3 +1,8 @@
+
+太祖长拳全套演练<br>
+https://www.bilibili.com/video/BV1XK411w75F/
+
+-------
 卡尔丹公式隐藏的信息 x^5-x+1=0 - Philip的文章   <br>
 https://zhuanlan.zhihu.com/p/699325080
 
