--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -19,7 +19,7 @@ https://www.bilibili.com/video/BV1C7411D7Hn/
 in your dream
 
 南国的风温柔地细语着<br> 
-充满美好回的那个时候<br> 
+充满美好回忆的那个时候<br> 
 我总是在一旁看着你那漠不关心的模样<br> 
 从此以后 就觉着离你好远<br> 
 啊 时间将会改变一切<br> 
