--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -2,6 +2,9 @@
 
 最新 7.29：
 
+写代码时，所有bug我都有能力解决，但是调不完。现在又碰到了相似的问题，看书时，每一句话我都可以做深度分析，但是分析不完。
+
+------
 【ZARD（1080p）】坂井泉水－不思议ね…「不可思议啊」<br> 
 https://www.bilibili.com/video/BV1C7411D7Hn/
 
