--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -2,7 +2,10 @@
 
 最新 7.29：
 
-写代码时，所有bug我都有能力解决，但是调不完。现在又碰到了相似的问题，看书时，每一句话我都可以做深度分析，但是分析不完。
+乌龙闯情关第13集35分24秒配乐：神仙歌伴奏
+
+------
+写代码时，碰到的所有bug我都有能力解决，但是由于没有解决本质问题，所以bug或性能问题多的调不完。现在又遇到了相同的困境，看书时，每一句话我都可以做深度分析，但是没那么多时间给我分析。
 
 ------
 【ZARD（1080p）】坂井泉水－不思议ね…「不可思议啊」<br> 
