--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -1521,6 +1521,8 @@ https://www.hswh.org.cn/wzzx/llyd/ls/2024-09-22/90171.html
 密电、夜行和追令：长征中极为关键的一步<br>
 https://www.whb.cn/zhuzhan/dushu/20190524/265265.html
 
+形势如此危急，毛泽东以高度的机智和果断寻求脱身之计。他立即到徐向前、陈昌浩处商谈行动方针。他先到了徐向前的住处，在院子里问徐向前：你的意见怎么样？徐向前说：两军既然已经会合，就不宜再分开，红四方面军如分成两半恐怕不好。毛泽东没再说别的，要他早点休息，遂告辞而归。
+
 党中央率领中央红军主力北进。清晨，红军大学政委何畏坐着担架来找陈昌浩，问：是不是有命令叫走？
 
 陈昌浩一听急了：“我们没有下命令，赶紧叫他们回来！”
