--- a/text/歌词.md
+++ b/text/歌词.md
@@ -1,7 +1,45 @@
 2025年：以歌词为主，也包含一些古诗词
 
-最新 7.28
+最新 7.29
 
+周华健/齐豫 - 天下有情人
+
+作词: 林夕
+作曲: 周华健
+编曲: 洪敬尧
+
+爱怎么做怎么错怎么看怎么难<br>
+怎么教人死生相随<br>
+爱是一种不能说只能尝的滋味<br>
+试过以后不醉不归<br>
+等到红颜憔悴<br>
+它却依然如此完美<br>
+等到什么时候<br>
+我们才能够体会<br>
+
+爱是一朵六月天飘下来的雪花<br>
+还没结果已经枯萎<br>
+爱是一滴擦不干烧不完的眼泪<br>
+还没凝固已经成灰<br>
+等到情丝吐尽<br>
+它才出现那一回<br>
+等到红尘残碎<br>
+它才让人双宿双飞<br>
+啊……<br>
+有谁懂得个中滋味<br>
+
+爱是迷迷糊糊<br>
+天地初开的时候<br>
+那已经盛放的玫瑰<br>
+爱是踏破红尘 望穿秋水<br>
+只因为爱过的人不说后悔<br>
+爱是一生一世一次一次的轮回<br>
+不管在东南和西北<br>
+爱是一段一段<br>
+一丝一丝的是非<br>
+教有情人再不能够 说再会
+
+------
 周华健/齐豫 - 神话情话
 
 作词: 林夕
