--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -1,7 +1,12 @@
 2025年想法：
 
-最新 7.29：
+最新 7.30：
 
+中国这个社会是由形式逻辑驱动的，我之前说中国人擅长辩证法，其实是在说反话，中国人擅长的是诡辩论，我之所以从来不提诡辩论是因为诡辩论的内核是由形式逻辑驱动的，我就是要把所有的矛头都对准形式逻辑。
+
+老实人对自己要有认知，你们不可能像社交达人一样把形式逻辑玩的八面玲珑，你们去玩形式逻辑那是害人害己，你们只能运用辩证法去应对这个社会。辩证法不要求快速的反应力，也允许犯错误，辩证法只需要你结合客观实际去分析，去实践，再分析，再实践。
+
+------
 已经听了一年歌了，我还没有赚到一分钱。可能有人表达过赞助或施舍的意愿，我知道都是开玩笑的了，就是我现在把二维码放出来能不能收到钱？肯定收不到一分钱的了，所以我就不放了，留一个美好的幻想。 6月生了一场重病，好了之后没多久，7月又生了一场更重的病，坚持不去医院，差点以为我要挂了，还好网上查资料喝中药挺过来了，现在我身体基本已经恢复健康了，对搞研究的热情已经减弱了很多，但是对工作更没有兴趣，想赚钱但又不想自取其辱去面试，接下来也不知道何去何从。
 
 ------
