--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -1,7 +1,10 @@
 2025年想法：
 
-最新 7.30：
+最新 7.31：
 
+sin(666*935°)=-1
+
+------
 中国这个社会是由形式逻辑驱动的，我之前说中国人擅长辩证法，其实是在说反话，中国人擅长的是诡辩论，我之所以从来不提诡辩论是因为诡辩论的内核是由形式逻辑驱动的，我就是要把所有的矛头都对准形式逻辑。
 
 老实人对自己要有认知，你们不可能像社交达人一样把形式逻辑玩的八面玲珑，你们去玩形式逻辑那是害人害己，你们只能运用辩证法去应对这个社会。辩证法不要求快速的反应力，也允许犯错误，辩证法只需要你结合客观实际去分析，去实践，再分析，再实践。
