--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,3 +1,7 @@
+嵩山少林寺一日游攻略！<br>
+https://www.bilibili.com/video/BV1Nj421D7Qu/
+
+-------
 【数码宝贝】丧尸暴龙兽进化4K<br>
 https://www.bilibili.com/video/BV1As4y1B78w/
 
@@ -5,7 +9,7 @@ https://www.bilibili.com/video/BV1As4y1B78w/
 https://www.bilibili.com/video/BV1XK411w75F/
 
 -------
-卡尔丹公式隐藏的信息 x^5-x+1=0 - Philip的文章   <br>
+卡尔丹公式隐藏的信息 x^5-x+1=0 - Philip的文章 <br>
 https://zhuanlan.zhihu.com/p/699325080
 
 存在“过时的、陈旧的数学内容”吗？ - 废土拾荒者的回答  <br>
