--- a/text/歌词.md
+++ b/text/歌词.md
@@ -1,7 +1,32 @@
 2025年：以歌词为主，也包含一些古诗词
 
-最新 7.29
+最新 7.31
 
+纯音乐欣赏《换到千般恨》<br>
+https://www.bilibili.com/video/BV16yxNeBEPh/
+
+作词:卢国沾
+作曲:黎小田
+
+梦里百花正盛开<br>
+梦醒再没有存在<br>
+付过千般爱换到千般恨<br>
+誓约已经变痛哀<br>
+事已到此永难改<br>
+莫非世事常意外<br>
+让我哭千遍滴了千点泪<br>
+誓约已经永不存在
+
+痴情枉种永难继续<br>
+但是未知天意何在<br>
+空余感慨盼能有日<br>
+我嘅爱心有人替代<br>
+就算爱心变尘埃<br>
+命中注定也无奈<br>
+付过千般爱在你手上<br>
+愿你暗中送它回来
+
+------
 周华健/齐豫 - 天下有情人
 
 作词: 林夕
