--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -1,7 +1,12 @@
 2025年想法：
 
-最新 7.31：
+最新 8.1：
 
+随着生产力的不断发展和生活物资的供应过剩，希望以后能产生一个不劳动也能生存的社会。但要塑造一个劳动光荣不劳动可耻的文化环境，不劳动自由搞研究要是能做出一些给人类思想和科技带来新突破的成果，那也是光荣的。对于更多的人来说，为了荣誉和赚更多的钱，他们愿意去劳动，有钱才会有更好的物质享受和更美好的精神体验，不劳动赚不到钱那就只能依靠社会最低保障苟活着。
+
+我是一个自私的人，只会考虑自身的利益，不会特意考虑不同于自身处境的他人利益。但是要像胖动来一样，从全局上有可操作性的有理想的角度去考虑，同时兼顾他人的合理利益，而不是不顾客观现实一厢情愿唯心的只想让社会对自己怎么怎么样好。
+
+------
 sin(666*935°)=-1
 
 ------
