--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,3 +1,5 @@
+香港岛和海参崴，同样都是割让，为何收回了香港岛而不是海参崴 - 万家灯火的文章 <br>
+https://zhuanlan.zhihu.com/p/1927999204950795630
 
 黄花树下不见不散超清<br>
 https://www.bilibili.com/video/BV1wT4y1V7kP/
