--- a/text/看书.md
+++ b/text/看书.md
@@ -6,9 +6,13 @@
 
 问题不在于目前某个无产者或者甚至整个无产阶级把什么看作自己的目的。问题在于究竟什么是无产阶级，究竟无产阶级根据它本身的这种存在而不得不在历史上做些什么。【历史唯物主义】
 
-埃德加尔先生不会不知道，布鲁诺•鲍威尔先生把“无限的自我意识“作为自己的一切阐释的基础，甚至把这一原则看成福音的创造原则，而福音由于其无限的无意识性则似乎是同无限的自我意识直接矛盾的。同样，蒲鲁东把平等看成同平等直接矛盾的私有制的创造原则。自我意识是人在纯思维中和自身的平等。【意识在自身中也可以分裂出不平等】
+埃德加尔先生不会不知道，布鲁诺•鲍威尔先生把“无限的自我意识“作为自己的一切阐释的基础，甚至把这一原则看成福音的创造原则，而福音由于其无限的无意识性则似乎是同无限的自我意识直接矛盾的。同样，蒲鲁东把平等看成同平等直接矛盾的私有制的创造原则。如果埃德加尔先生把法国的平等和德国的自我意识稍微比较一下，他就会发现，后一个原则按德国的方式即用抽象思维所表达的东西，就是前一个原则按法国的方式即用政治的和思维直观的语言所表达的东西。自我意识是人在纯思维中和自身的平等。平等是人在实践领域中对自身的意识，也就是人意识到别人是和自己平等的人，人把别人当作和自已平等的人来对待。平等是法国的用语，它表明人的本质的统一、人的类意识和类行为、人和人的实际的同一，也就是说，它表明人对人的社会的关系或人的关系。因此，德国的破坏性的批判，在以费尔巴哈为代表对现实的人进行考察以前，力图用自我意识的原则来铲除一切确定的和现存的东西，而法国的破坏性的批判则力图用平等的原则来达到同样的目的。
 
-蒲鲁东想消灭不拥有以及拥有的旧形式，这同他想消灭人对自己的对象性本质【辩证法】的实际异化【形式逻辑】关系，同他想消灭人的自我异化在国民经济学中的表现，完全是一回事。
+“我们一再地提起这一点••••••蒲鲁东是为了无产者的利益而写作的。”是的，蒲鲁东写作不是出于自满自足的批判的利益，不是出于抽象的、人为的利益，而是出于群众的，现实的、历史的利益，出于超过批判的利益，也就是导致危机的利益。蒲鲁东不单是为了无产者的利益而写作：他本人就是无产者，工人。他的著作是法国无产阶级的科学宣言，因而比起任何一个批判的批判家的拙劣的作品，它都具有完全不同的历史意义。
+
+蒲鲁东想消灭不拥有以及拥有的旧形式，这同他想消灭人对自己的对象性本质【辩证法】的实际异化【形式逻辑】关系，同他想消灭人的自我异化在国民经济学中的表现，完全是一回事。蒲鲁东没有象批判的批判硬要他做的那样，以拥有来反对不拥有，而是以占有来反对拥有的旧形式即私有制。他宜称占有是“社会的职能”。不过在这种职能中，“利益”不是要“排斥”别人，而是要把我本身的本质力量使用出来和发挥出来。
+
+蒲鲁东未能用恰当的话来表达自已的这个思想。“平等占有”是国民经济学的观念，因而还是下列这个事实的异化表现：对象是为人的存在，是人的对象性存在，同时也就是人为他人的定在，是他对他人的人的关系，是人对人的社会关系。蒲鲁东在国民经济学中的异化范围内来克服国民经济学中的异化。
 
 ------
 　　胡风所谓“舆论一律”，是指不许反革命分子发表反革命意见。这是确实的，我们的制度就是不许一切反革命分子有言论自由，而只许人民内部有这种自由。我们在人民内部，是允许舆论不一律的，这就是批评的自由，发表各种不同意见的自由，宣传有神论和宣传无神论（即唯物论）的自由。一个社会，无论何时，总有先进和落后两种人们、两种意见矛盾地存在着和斗争着，总是先进的意见克服落后的意见，要想使“舆论一律”是不可能的，也是不应该的。只有充分地发扬先进的东西去克服落后的东西，才能使社会前进。但是在国际国内尚有阶级和阶级斗争存在的时代，夺取了国家权力的工人阶级和人民大众，必须镇压一切反革命阶级、集团和个人对于革命的反抗，制止他们的复辟活动，禁止一切反革命分子利用言论自由去达到他们的反革命目的。这就使胡风等类反革命分子感到“舆论一律”对于他们的不方便。他们感到不方便，正是我们的目的，正是我们的方便。我们的舆论，是一律，又是不一律。在人民内部，允许先进的人们和落后的人们自由利用我们的报纸、刊物、讲坛等等去竞赛，以期由先进的人们以民主和说服的方法去教育落后的人们，克服落后的思想和制度。一种矛盾克服了，又会产生新矛盾，又是这样去竞赛。这样，社会就会不断地前进。有矛盾存在就是不一律。克服了矛盾，暂时归于一律了；但不久又会产生新矛盾，又不一律，又须要克服。在人民与反革命之间的矛盾，则是人民在工人阶级和共产党领导之下对于反革命的专政。在这里，不是用的民主的方法，而是用的专政即独裁的方法，即只许他们规规矩矩，不许他们乱说乱动。这里不但舆论一律，而且法律也一律。在这个问题上，胡风等类的反革命分子好象振振有词；有些糊涂的人们在听了这些反革命论调之后，也好象觉得自己有些理亏了。你看，“舆论一律”，或者说，“没有舆论”，或者说，“压制自由”，岂不是很难听的么？他们分不清楚人民的内部和外部两个不同的范畴。在内部，压制自由，压制人民对党和政府的错误缺点的批评，压制学术界的自由讨论，是犯罪的行为。这是我们的制度。而这些，在资本主义国家里，则是合法的行为。在外部，放纵反革命乱说乱动是犯罪的行为，而专政是合法的行为。这是我们的制度。资本主义国家正相反，那里是资产阶级专政，不许革命人民乱说乱动，只叫他们规规矩矩。剥削者和反革命者无论何时何地总是少数，被剥削者和革命者总是多数，因此，后者的专政就有充分的道理，而前者则总是理亏的。胡风又说：“绝大多数读者都在某种组织生活中，那里空气是强迫人的。”我们在人民内部，反对强迫命令方法，坚持民主说服方法，那里的空气应当是自由的，“强迫人”是错误的。“绝大多数读者都在某种组织生活中”，这是极大的好事。这种好事，几千年没有过，仅在共产党领导人民作了长期的艰苦的斗争之后，人民方才取得了将自己由利于反动派剥削压迫的散沙状态改变为团结状态的这种可能性，并且于革命胜利后几年之内实现了这种人民的大团结。胡风所说的“强迫人”，是指强迫反革命方面的人。他们确是胆战心惊，感到“小媳妇一样，经常的怕挨打”，“咳一声都有人录音”。我们认为这也是极大的好事。这种好事，也是几千年没有过，仅在共产党领导人民作了长期艰苦斗争之后，才使得这些坏蛋感觉这么难受。一句话，人民大众开心之日，就是反革命分子难受之时。我们每年的国庆节，首先就是庆祝这件事。胡风又说：“文艺问题也实在以机械论最省力。”这里的“机械论”是辩证唯物论的反话，“最省力”是他的瞎说。世界上只有唯心论和形而上学最省力，因为它可以由人们瞎说一气，不要根据客观实际，也不受客观实际检查的。唯物论和辩证法则要用气力，它要根据客观实际，并受客观实际检查，不用气力就会滑到唯心论和形而上学方面去。胡风在这封信里提出了三个原则性的问题，我们认为有加以详细驳斥的必要。胡风在这封信里还说到：“目前到处有反抗的情绪，到处有进一步的要求”，他是在一九五○年说的。那时，在大陆上刚刚消灭了蒋介石的主要军事力量，还有许多化为土匪的反革命武装正待肃清，大规模的土地改革和镇压反革命的运动还没有开始，文化教育界也还没有进行整顿工作，胡风的话确实反映了那时的情况，不过他没有说完全。说完全应当是这样：目前到处有反革命反抗革命的情绪，到处有反革命对于革命的各种捣乱性的进一步的要求。
