--- a/text/看书.md
+++ b/text/看书.md
@@ -8,6 +8,8 @@
 
 埃德加尔先生不会不知道，布鲁诺•鲍威尔先生把“无限的自我意识“作为自己的一切阐释的基础，甚至把这一原则看成福音的创造原则，而福音由于其无限的无意识性则似乎是同无限的自我意识直接矛盾的。同样，蒲鲁东把平等看成同平等直接矛盾的私有制的创造原则。如果埃德加尔先生把法国的平等和德国的自我意识稍微比较一下，他就会发现，后一个原则按德国的方式即用抽象思维所表达的东西，就是前一个原则按法国的方式即用政治的和思维直观的语言所表达的东西。自我意识是人在纯思维中和自身的平等。平等是人在实践领域中对自身的意识，也就是人意识到别人是和自己平等的人，人把别人当作和自已平等的人来对待。平等是法国的用语，它表明人的本质的统一、人的类意识和类行为、人和人的实际的同一，也就是说，它表明人对人的社会的关系或人的关系。因此，德国的破坏性的批判，在以费尔巴哈为代表对现实的人进行考察以前，力图用自我意识的原则来铲除一切确定的和现存的东西，而法国的破坏性的批判则力图用平等的原则来达到同样的目的。
 
+哲学是事物现状的抽象表现这样一种看法，本来不是埃德加尔先生提出的，而是费尔巴哈提出的；费尔巴哈最先把哲学称为思辩的和神秘的经验,并加以证明。
+
 “我们一再地提起这一点••••••蒲鲁东是为了无产者的利益而写作的。”是的，蒲鲁东写作不是出于自满自足的批判的利益，不是出于抽象的、人为的利益，而是出于群众的，现实的、历史的利益，出于超过批判的利益，也就是导致危机的利益。蒲鲁东不单是为了无产者的利益而写作：他本人就是无产者，工人。他的著作是法国无产阶级的科学宣言，因而比起任何一个批判的批判家的拙劣的作品，它都具有完全不同的历史意义。
 
 蒲鲁东想消灭不拥有以及拥有的旧形式，这同他想消灭人对自己的对象性本质【辩证法】的实际异化【形式逻辑】关系，同他想消灭人的自我异化在国民经济学中的表现，完全是一回事。蒲鲁东没有象批判的批判硬要他做的那样，以拥有来反对不拥有，而是以占有来反对拥有的旧形式即私有制。他宜称占有是“社会的职能”。不过在这种职能中，“利益”不是要“排斥”别人，而是要把我本身的本质力量使用出来和发挥出来。
