--- a/text/看书.md
+++ b/text/看书.md
@@ -1,4 +1,20 @@
 
+关于荣誉和耻辱，这个时代有自已的理解，它同以往任何时代对它们的理解都完全不同。在我们这个时代，给自已提出一个很高的目标，是一种使人立即丧失荣誉和良好名声的罪行。——有一位人说，“那个提出这种目标的人自已说过，他想把哲学提高到一种具有自明性的科学的高度，他想成为哲学界的欧几里得（虽然后面这句话不是他自己说的）”
+“噢，不，”第二位心肠更好的人回答道，“那个人有自已的敌人，这不过是人们给他捏造出来的，我不相信这种话。”
+——“那你就自己看吧，这儿印着呢。”
+——“呀，这儿真有这种话。我简直不能相信自已的眼晴。这个厚颜无耻的人！这个令人可憎的人！我不袒护他了。”
+
+我要站出来，说明我之所以认为哲学的任务在于把全部经验作为自我意识的必然条件推导出来的根据；哲学是我的专业，所以我应做这项工作。谁对此持反对意见，谁就必须证明我赋予哲学以这一使命的根据是不充分的，如果他不能做到这一点，他就必须具体地证明我的演绎是不正确的，如果他连此中的任何一点都做不到，他就必须完全住口。——但他们怎么办呢？我对他们说，我这里先验地演绎出了设想我们同类中的其他理性存在者的必然性。他们回答我说：“啊，您先验地演绎出了设想我们同类中的其他理性存在者的必然性；您想想吧！哈哈哈！” 我对他们说，我在这里先验地演绎出了空气和阳光。他们回答我说：“先验的空气和阳光；您想想吧！哈哈哈！哈哈哈！哈哈哈！您也跟着笑呀！哈哈哈！哈哈哈！哈哈哈！先验的空气和阳光：tarte a la creme［奶油蛋糕］，哈哈哈！先验的空气和阳光！奶油蛋糕，哈哈哈！先验的空气和阳光！奶油蛋糕，哈哈哈！”就这样没完没了地重复下去。
+
+我吃惊地环顾四周。我误入何处了呢？我本来以为进入了学者的共同体。原来是我落入了疯人院。
+
+亲爱的同乡们，你们好好笑吧，等你们重新恢复理智以后，我想跟你们说几句话。
+
+你们向我讲这是我说的，这我自已知道得很清楚。我是说过这样的话，谁还能比我对此知道得更清楚呢！我一点也不为此惭愧，也不会否认此事。你们用不着这么死死揪住我。我会顶住你们的；但愿老天爷帮助你们，使你们能顶住我。
+
+亲爱的同乡们，恰恰从你们的惊异中，从你们对每一个命题发出的聒噪声中，可以看出你们不仅没有学过哲学的最基本的原理不懂哲学的最普通的概念，而且你们根本就缺乏人所共有的理智，这表现在你们以为自已在思考着什么，其实你们根本没有能力思考这些东西。如果我眼下不这么清楚地说出这一点，使周围所有的人，包括你们自已，都不得不承认这一点，那我就是想当疯子，而你们对我则将成为伟大的阿波罗神。
+
+--------
 马克思《神圣家族》：有产阶级和无产阶级同是人的自我异化。但前一个阶级在这种自我异化中感到自己是满足的和稳固的【安于享乐，不思进取】，它把这种异化看作它自身的强大有力，并在这种异化中获得合乎人性的生存的外观。而后一个阶级在这种异化中则感到自已是被毁灭的，并在这种异化中看到自己的无能为力和违反人性的生存的现实【放弃人的精神体验，用无休止的机械性体力（脑力）劳动来换取生存】。这个阶级，用黑格尔的话来说，就是在被唾弃的状况下对这种状况的愤概，这个阶级之所以必然表现出这种愤概，是由于它的人的本性和它那种公开地，断然地，全面地否定这种本性的生活状况相矛盾。
 由此可见，在这个对立的范围内，私有者是保守的方面【只是暂时的，长时间保守也会转化为破坏】，无产者是破坏的方面【也是进步的，破坏只是暂时的】。从前者产生保持这一对立的行动，从后者产生消灭这一对立的行动。
 
