--- a/text/长文1.md
+++ b/text/长文1.md
@@ -1,4 +1,96 @@
+接“而你们对我则将成为伟大的阿波罗神。”
 
+先验的空气和阳光——你们别马上笑起来——这到底有什么稀奇的呢？
+
+“哎，对空气和阳光的认识是后验的；空气和阳光是经验的对象。”
+
+当然，谁否认这一点呢？我们除了经验到底还有什么呢？
+
+“但是，您刚才还说它们是先验的。”
+
+当然，对我们来说，事物除了用先验的方式，还能用另一种方式存在吗？——现在他们不笑了，他们睁大了惊异的眼睛。
+
+“同一个事物能够既是先验的，也是后验的吗？”
+
+我倒要问你们：究竟有什么东西是先验的，正因如此而一定不是后验的呢？究竟有什么东西能够是后验的，而不是由于它是先验的了呢？——他们越发惊异了。
+
+“但是，同乡，您正经点说！您大概因为我们先同您开了玩笑，现在就在拿我们开玩笑吧？”
+
+你们还是正经点说吧，你们真的还不知道这个吗？
+
+“不知道，这对我们来说是新鲜的。我们本来以为，如果有什么东西是先验地演绎出来的，这就否定了这个东西是经验的对象；所以我们刚才这么放肆地笑了。”
+
+“是这样吗？你们原来对于哲学到底有什么概念啊！比如说，后验这个词原来对你们到底意味着什么呢？”
+
+“经验的对象。”
+
+“那么，经验这个词对你们又意味着什么呢？”
+
+“嗯，就是这种后验的东西。”
+
+“是这样吗？我看你们不善于表达自己的意思；你们大概是以思维见长。后验的东西对于你们来说就是那种不是由理性规律规定的，而是从外界给予感受性的东西。你们身外有一张桌子、一把椅子、一个写字台，它们刺激你们的感官，从这种刺激中你们产生了对这些事物的表象。我想这种说法你们完全接受得了吧？
+
+你们不是坚定的独断论者，就是康德派。——第一种人我马上就能驳倒，让我先来说说这种人吧！
+
+对你们来说一切东西都只是后验的，关于先验东西的概念在你们看来只是可笑的。你们觉得这样很舒服，省掉了很多矛盾，而你们的同父异母兄弟是陷入了这种矛盾中的，当我把你们同康德派相比时，我对你们怀有多么真正的敬意啊。对你们来说，我们的一切表象都是产生于事物对我们的作用。
+
+纯粹的人类共同理智对你们说，存在和知识是两种恰好相反的东西。知识是针对存在的，我们的知识是为了存在，但从单纯的存在中产生不出任何知识。
+
+这样，根据你们自己的表白，作用于我们的事物就只有存在了，存在的产物也总是存在，而不是其他什么东西；但你们却把存在变成了知识。你们对这种变化一无所知，所以对它不会作任何思考；你们甚至没有察觉你们不明白这种变化。你们想用浇水的办法让我们明白火是怎么着起来的。你们浇啊，浇啊，并且喊道：“你们难道没有看到着火了吗？”当我们摇头时，你们又叫喊：“再浇水！”想让我们把事情看得更加明白。但我们一点也不怀疑是着火了；我们只是怀疑，你们是不是用水点着火的。——你们想把我们骗过去，反而骗了你们自己。你们大概在想，只要你们能把这个存在雕得很精细，越来越精细，最后就会从中产生出知识；通过种种精雕细琢，你们自己终于以为知识是可以用手抓取的存在。但存在永远是存在。你们是爱开玩笑的人，把同一个芬尼重复按在一个笑嘻嘻的男孩子手里，让他以为自己有了两个芬尼；他大概不会受骗，但是你们把那一个芬尼装在口袋里走了，而且坚信你们有两个芬尼。我们弄不懂你们的后验应当叫什么，而你们自己也弄不懂。”
+
+康德派大概能给我们好一点的答复。他们的信仰，至少那些跟着笑的人的信仰，是这样的：所有在意识中出现的东西，都可以划分为两个主要组成部分，一部分是先验的，是先于一切经验而存在于精神中的，而先验的东西就不是后验的；另一部分是通过经验后验地进入我们之内的，这种后验的东西就不是先验的。客体的概念是先验存在的，比如权利概念、因果性概念就都是先于一切经验存在的。但这些概念的客体却是在此之后通过经验才进入我们之内的，比如，拥有权利的人，使人进入一种法治关系的空气和阳光，像原因和结果这种客体的关系等等，都只是后验的。
+
+——我不想问你们，对存在着的客体的表象是以何种方式进入我们之内的。那样的话，你们就得逃到独断论的魔术中躲藏起来，把存在转变成知识；但你们这个小小的不幸事故对你们来说并没有继续扩大！我也不想用下列问题来纠缠你们：先验的概念和后验的客体怎么总是恰好相互符合；为什么客体从来都不超过可以争辩的概念，而不致使一些概念有时茕茕孑立，不得不在其他概念面前感到羞愧，为什么在有时缺乏结合方法的情况下，材料不会超过概念，就像《休比拉斯先生》中的驼峰在没有后鞧的情况下不会超过头部那样。
+
+我只想让你们解释一下你们自己说的话。说概念是先验存在的，这究竟意味着什么呢？
+
+“嗯，这就是说，它们是先于一切经验而存在于精神中的。”
+
+“好，但是，那个包含另一种东西的东西，大概必定是独立存在的吧？”
+
+“当然。”
+
+“照此说来，在一切经验之前就存在精神了。” ——在这里他们可哑口无言了。我继续作自己的论证。
+
+——凡是存在的东西，必然都存在于空间中（你们绝不可能作另外的设想，何况这是你们的哲学的一个主要命题）；但是，凡是存在于空间中的东西都是物质的。因此，在一切经验之前就有了一种物质性的精神。它是木头的呢，还是石头的呢？或者还是皮子的呢？在这个木头的，或石头的，或皮子的先验精神中包含着概念。这些概念究竟是些什么东西呢？大概它们是可以钻入东西的洞，这些东西接受了这此洞的形状和式样，就像倒进网纹饼模子的面团一样，是这样吗？
+
+“哎，不，对这些东西人们不必继续思考了；人们不必用范畴规定它们。”
+
+“是吗？你们能这么随心所欲地把这个问题忽略掉吗？我们其他人可不能这么做。但我理解你们，你们并不想让人明确地思考这个问题，而是想让人仅仅笼统地想想。
+
+由此可见，经验给予了你们完全现成的客体，空气和阳光是固定的和现成的，处于因果关系中的客体是固定的和现成的。你们就停留在最后这些东西上吧。你们有对这些客体的意识，这种意识在你们之内是后验产生的。客体的性状是这样的：一个客体包含另一个客体的特定存在的根据；它们就是这样给予你们的，你们是后验地得知这一点的。但我还是再来看看你们本来知道些什么吧。
+
+“我们知道一个客体包含另一个客体存在的根据。”
+
+但在这里你们得到的因果性概念是有血有肉的。你们有了后验的因果性概念，你们这些不知足的人，为什么还想要得到先验的因果性概念呢？
+
+给予你们的是先验的概念，你们是这么看的，比如说因果性概念。这个概念究竟是什么意思呢？
+
+“这个概念的意思是，一个客体包含着另一个客体存在的根据。”
+
+“一个怎么包含另一个的根据呢？这一个是什么？另一个又是什么？哎，如果我理解得对，它们是客体。你们要是没有客体，根本就不可能有那种概念；假如这个概念是你们先验获得的，那你们也必定获得了客体，你们用不着先去求后验的客体。——你们的情况就是这样；你们想保持先验的客体时，你们却失去了后验的客体；而当你们追求后验的客体时，先验的客体又逃之夭夭了。
+
+你们就承认这一点吧；关于你们十年来一直想说服可怜的公众接受的东西，连你们自己都一窍不通。哪怕你们知道这一点也好啊！但就连这一点你们也没察觉，因为你们根本没有作明确思考的才能，你们根本不知道，究竟什么叫理解。
+
+你们自命为康德派哲学家，却从来不懂这派哲学最基本的概念的意义，不懂先验和后验这两个词的意义。
+
+既然你们不知道你们应当知道的这一切，那你们就让那些知道的人告诉你们吧，你们可别摆出一副愁眉苦脸的样子。
+
+没有任何东西从外界进入人之内：人是有理智的东西，因此他是依靠自身的本质自为存在的：（他的存在是一种知识）。
+
+但是，根据他的这种本质的规律，如果没有一个特定的他物体系是为他存在的，他就不能自为存在。这就是全部经验的体系，这种经验是必然的，正如只有他存在一样：（继续得到的经验不是别的，正是对那种基于人的本质的体系继续进行的分析）。
+
+只要他存在，他就会发现自己；但是他发现了自己，他就会发现这个体系。心灵和心灵中的一切都不是经验的。如果人们看到这种发现的活动，那么，为人存在的一切可能的东西和人自身就都只存在于经验中（a posteriori）。如果人们看到，人的本质中的一切都是有必然根据的，那么这种本质是先验的。
+
+到此争论平息了；你们以后别再这么瞎笑，如果你们还能聪明起来，那可真叫我由衷地感到高兴。
+
+我渐渐后悔与我们这位书评家进行交往，因为我在半路上碰到了对我来说内容丰富得多的原著，而对我们这位书评家来说，只要他有能力做这些愚蠢之极的事，这一切都可以用来抬高他自己。
+
+事情看来并非如此。在后面第193页，他又这样来理解我的演绎：我证明，有很多人彼此并存，他们通过空气和阳光而相互知觉到对方。
+
+多蒙皇家科学院的恩宠，但您在这儿可没有说出真理。我不知道什么是与意识没有关联的存在；而是我肯定地知道，这纯粹是胡说八道。我只是演绎出，为什么设想我们之外的其他人是必然的；进一步的演绎都不是真实的。
+
+--------
 　　有阶级斗争才有哲学（脱离实际谈认识论没有用）。学哲学的同志应当下乡去。今冬明春就下去，去参加阶级斗争。身体不好也去，下去也死不了人，无非是感冒，多穿几件衣服就是了。
 
 　　大学文科现在的搞法不行。从书本到书本，从概念到概念。书本里怎能出哲学？马克思主义三个构成部分，基础是社会学，阶级斗争。无产阶级和资产阶级之间作斗争，马克思他们看出，空想社会主义者想劝资产阶级发善心，这个办法不行，要依靠无产阶级的阶级斗争。那肘已经有许多罢工。英国国会调查，认为与其十二小时工作制不如八小时工作制对资本家有利。从这个观点开始，才有马克思主义，基础是阶级斗争，然后才能研究哲学。什么人的哲学？资产阶级的哲学，无产阶级的哲学。无产阶级哲学是马克思主义哲学，还有无产阶级经济学，改造了古典经济学。搞哲学的人，以为第一是哲学，不对，第一是阶级斗争。压迫者压迫被压迫者，被压迫者要反抗，找出路，才去找哲学。我们都是这样过来的。别人要杀我的头，蒋介石要杀我，这才搞阶级斗争，才搞哲学。
