--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -2,6 +2,11 @@
 
 最新 8.1：
 
+少年张三丰第40集4分03秒：
+
+![耍太极](../pic/sub/shuataiji3.JPG) <br>
+
+------
 随着生产力的不断发展和生活物资的供应过剩，希望以后能产生一个不劳动也能生存的社会。但要塑造一个劳动光荣不劳动可耻的文化环境，不劳动自由搞研究要是能做出一些给人类思想和科技带来新突破的成果，那也是光荣的。对于更多的人来说，为了荣誉和赚更多的钱，他们愿意去劳动，有钱才会有更好的物质享受和更美好的精神体验，不劳动赚不到钱那就只能依靠社会最低保障苟活着。
 
 我是一个自私的人，只会从自身的利益出发去考虑问题，不会特意考虑不同于自身处境的他人利益。但是要像胖动来一样，从全局上有可操作性的有理想的角度去考虑，同时兼顾他人的合理利益，而不是不顾客观现实一厢情愿唯心的只想让社会对自己怎么怎么样好。
@@ -10,7 +15,7 @@
 sin(666*935°)=-1
 
 ------
-中国这个社会是由形式逻辑驱动的，我之前说中国人擅长辩证法，其实是在说反话，中国人擅长的是诡辩论，我之所以从来不提诡辩论是因为诡辩论的内核是由形式逻辑驱动的，我就是要把所有的矛头都对准形式逻辑。
+中国这个社会是由形式逻辑驱动的，我之前说过中国人擅长辩证法，这明显说的是反话，中国人最擅长的是诡辩论，我之所以从来不提诡辩论是因为诡辩论的内核是由形式逻辑驱动的，我就是要把所有的矛头都对准形式逻辑。
 
 老实人对自己要有认知，你们不可能像社交达人一样把形式逻辑玩的八面玲珑，你们去玩形式逻辑那是害人害己，你们只能运用辩证法去应对这个社会。辩证法不要求快速的反应力，也允许犯错误，辩证法只需要你结合客观实际去分析，去实践，再分析，再实践。
 
