--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,5 +1,5 @@
 
-对晋绥日报编辑人员的谈话（毛泽东） - 成儿的文章 br>
+对晋绥日报编辑人员的谈话（毛泽东） - 成儿的文章 <br>
 https://zhuanlan.zhihu.com/p/588917158
 
 毛主席：《晋绥日报》在去年六月的地委书记会议以后，有很大进步。内容丰富，尖锐泼辣，有朝气，反映了伟大的群众斗争，为群众讲了话。我很愿意看它。
