--- a/text/歌词.md
+++ b/text/歌词.md
@@ -33,6 +33,11 @@
 看不透世上的真 <br>
 你还是这样天真 <br>
 
+![假如](../pic/sub/zaisheng.JPG) <br>
+![跃动](../pic/sub/yuedong.JPG) <br>
+![吃人](../pic/sub/she.JPG) <br>
+![太极](../pic/sub/taiji.JPG) <br>
+
 --------
 邰正宵-找一个字代替
 
