--- a/text/歌词.md
+++ b/text/歌词.md
@@ -1,7 +1,27 @@
 2025年：以歌词为主，也包含一些古诗词
 
-最新 8.1
+最新 8.2
 
+陈毅 - 梅岭三章
+
+一九三六年冬，梅山被围。余伤病伏丛莽间二十余日，虑不得脱，得诗三首留衣底。旋围解。
+
+（一）
+
+断头今日意如何？创业艰难百战多。<br>
+此去泉台招旧部，旌旗十万斩阎罗。<br>
+
+（二）
+
+南国烽烟正十年，此头须向国门悬。<br>
+后死诸君多努力，捷报飞来当纸钱。<br>
+
+（三）
+
+投身革命即为家，血雨腥风应有涯。<br>
+取义成仁今日事，人间遍种自由花。<br>
+
+------
 张卫健 - 虚虚实实
 
 作词: 林敏骢
