--- a/text/歌词.md
+++ b/text/歌词.md
@@ -22,6 +22,15 @@
 取义成仁今日事，人间遍种自由花。<br>
 
 ------
+![碰碰拳](../pic/sub/daquan.JPG) <br>
+
+-----—
+![韦小宝](../pic/sub/xiaobao.JPG) <br>
+
+-----—
+![承让](../pic/sub/bishi.JPG) <br>
+
+-----—
 张卫健 - 虚虚实实
 
 作词: 林敏骢
