--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,4 +1,21 @@
 
+有没有人能告诉我，磁场到底是怎么产生的？ - 悟理晓章的回答  <br>
+https://www.zhihu.com/question/1911523239068435345/answer/1923024518454149252
+
+1820年4月的一个夜晚，奥斯特在讲课快要结束的时候突然想到："让我们把导线与磁针平行放置来试试看．"按这种想法放置之后，他把电源接通了，立即发现：磁针转向与通电导线垂直的方向．这就表明电流可以使周围空间里出现磁场。
+
+既然说场是一种物质,那么构成它的基本粒子是什么? - 甚荒唐的回答 <br>
+https://www.zhihu.com/question/549370657/answer/2844989504
+
+甚荒唐：至于什么构成的场，人类还不知道。各种场交织在一起弥散在宇宙空间中，也有人说没必要把场放在空间里，空间就是场，物质就是场的激发态。
+
+美国电气工程师尼古拉特斯拉的《引力的动态理论》是否真实存在？ - 夏一哂的回答<br>
+https://www.zhihu.com/question/665418576/answer/3608020057
+
+夏一哂：
+游荡四野，思想的漫步者，世间的观察者 这个传言的存在,某种程度上反映了人们对特斯拉这位神秘天才的持续着迷。特斯拉确实有许多超前的想法,其中一些在当时看来近乎天方夜谭,却在今天成为现实。这或许是人们愿意相信他还有更多未公开的惊人理论的原因。
+
+-------
 对晋绥日报编辑人员的谈话（毛泽东） - 成儿的文章 <br>
 https://zhuanlan.zhihu.com/p/588917158
 
