--- a/text/歌词.md
+++ b/text/歌词.md
@@ -1,7 +1,12 @@
 2025年：以歌词为主，也包含一些古诗词
 
-最新 8.2
+最新 8.3
 
+![飞剑出鞘](../pic/sub/xiakexing1.JPG) <br>
+![斩击](../pic/sub/xiakexing2.JPG) <br>
+![吓一跳](../pic/sub/xiakexing3.JPG) <br>
+
+-----
 陈毅 - 梅岭三章
 
 一九三六年冬，梅山被围。余伤病伏丛莽间二十余日，虑不得脱，得诗三首留衣底。旋围解。
