--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -1,7 +1,11 @@
 2025年想法：
 
-最新 8.2：
+最新 8.3：
 
+14.激战(侠客行电视引用配乐)<br>
+https://www.aigei.com/view/65255.html
+
+------
 1999中视 钱小豪 朱茵 吴京 樊少煌【新少林寺】片头曲<br>
 https://www.bilibili.com/video/BV15S4y1k7xV/
 
