--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -2,6 +2,9 @@
 
 最新 8.3：
 
+零几年时的中央电视台很强势，但最多也只有十几个台，而地方电视台多如牛毛，有省级的、市级的、县级的，装了闭路电视可以看40多个台，所以当时拍的电视剧也很强势。现在能看电视剧的也就那么几个网络平台，新拍的电视剧似乎都不太强势了，我都分不清到底是不好看才变得不强势，还是不强势才变得不好看。至于未来会变成什么样，我也不知道。
+
+------
 14.激战(侠客行电视引用配乐)<br>
 https://www.aigei.com/view/65255.html
 
