--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,4 +1,11 @@
 
+为何有些人称有线电视为闭路电视？ - 手召貝才的回答  <br>
+https://www.zhihu.com/question/301800528/answer/3614754988
+
+手召貝才：
+开电鸡的打工仔 因为有无线电视的存在，也就是开路电视，开路也就是完全不加密，收到信号就可以免费收看的。
+
+------
 有没有人能告诉我，磁场到底是怎么产生的？ - 悟理晓章的回答  <br>
 https://www.zhihu.com/question/1911523239068435345/answer/1923024518454149252
 
