--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -4,6 +4,8 @@
 
 零几年时的中央电视台很强势，但最多也只有十几个台，而地方电视台多如牛毛，有省级的、市级的、县级的，装了闭路电视可以看40多个台，所以当时拍的电视剧也很强势。现在能看电视剧的也就那么几个网络平台，新拍的电视剧似乎都不太强势了，我都分不清到底是不好看才变得不强势，还是不强势才变得不好看。至于未来会变成什么样，我也不知道。
 
+这和平台没关系，在网络上想看电视剧肯定比只有电视的年代要方便。也不一定，比较的应该是相同年龄段。当时电视剧强势是主要没有网络平台的竞争。但是现在网络那么发达，却拍不出当年那么多好看的电视剧。也不能说现在的电视剧不好看，我没看过，只是现在不想看新剧，我是一个怀旧的人，只是当年拍的电视剧我刚好看过，可能当年拍的电视剧放在现在拍出来我也不一定会去看。
+
 ------
 14.激战(侠客行电视引用配乐)<br>
 https://www.aigei.com/view/65255.html
