--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,4 +1,10 @@
 
+韩毓海：我带荷兰人一起重读毛泽东<br>
+https://www.kunlunce.com/jczc/mzdsx/2017-04-29/115485.html
+
+而什么是生？生就是勇敢面对未知的新世界，生，就是在大风大浪里锻炼成长。
+
+------
 为何有些人称有线电视为闭路电视？ - 手召貝才的回答  <br>
 https://www.zhihu.com/question/301800528/answer/3614754988
 
