--- a/text/歌词.md
+++ b/text/歌词.md
@@ -28,7 +28,8 @@
 平乱世后再升天
 
 ------
-![飞剑出鞘](../pic/sub/xiakexing1.JPG) <br>
+![飞鞘出剑](../pic/sub/xiakexing1.JPG) <br>
+![闪身](../pic/sub/xiakexing.JPG) <br>
 ![斩击](../pic/sub/xiakexing2.JPG) <br>
 ![吓一跳](../pic/sub/xiakexing3.JPG) <br>
 
