--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,4 +1,10 @@
 
+怎么看待樱花动漫运营者被判2年3个月? - 枫林晚丶的回答  <br>
+https://www.zhihu.com/question/1934241278582822809/answer/1934665504422893169
+
+枫林晚丶：国内的支持正版大都是假借正版之名，搞垄断之实，然后搞各种vip恶习你。
+
+------
 韩毓海：我带荷兰人一起重读毛泽东<br>
 https://www.kunlunce.com/jczc/mzdsx/2017-04-29/115485.html
 
