--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -1,7 +1,13 @@
 2025年想法：
 
-最新 8.4：
+最新 8.5：
 
+截取，03年萧十一郎，背景音乐第四十集<br>
+https://5sing.kugou.com/bz/2878418.html
+
+![至少爱过](../pic/sub/jieju.JPG) <br>
+
+------
 现在的LLM不可能产生“涌现”，因为没有历史演化，模型好像是参数训练好了就固定在那里。
 
 ------
