--- a/text/看书.md
+++ b/text/看书.md
@@ -1,4 +1,54 @@
 
+　　萧十一郎又开始在喝酒。 <br>
+　　这么多的酒，本来已足够让他完全麻木，可是现在，他眼睛里还是露出了痛苦之色。 <br>
+　　不但有痛苦，而且还有恐惧。 <br>
+　　他恐惧的，也许并不是连城璧这个人，而是这种仇恨。 <br>
+　　连城璧道：“我用尽了一切方法，先让你的声名，财富，地位，都达到巅峰，然后再让你掉下来，利用你作工具，替我除去了那些叛徒，这两点你现在一定已经想通了。” <br>
+　　萧十一郎道：“我……” <br>
+　　连城璧道：“我本来还想要你到八仙船去，替我杀了最后那几个叛徒，只有那一次的计划，我没有完全成功。”他笑了笑，接着道：“可是到了那时候，世上已没有任何人，任何事能阻挡我，你就算不去，我也一样可以自己动手。” <br>
+　　萧十一郎道：“所以你故意让我错过了，因为你觉得你自己动手更方便。” <br>
+　　连城璧道：“我的确喜欢自己动手，无论什么事都是一样。” <br>
+　　萧十一郎道：“那瞎子也是你扮成的？” <br>
+　　连城璧道：“我要让你有一种错觉，认为那瞎子就是逍遥侯，认为逍遥侯还没有死。” <br>
+　　萧十一郎道：“为什么？” <br>
+　　连城璧道：“因为我要把这所有的责任，都推到冰冰身上。” <br>
+　　萧十一郎垂下头，黯然道：“冰冰……冰冰……她真是个可怕的女孩子。” <br>
+　　连城璧道：“这一切计划大功告成之后，冰冰和逍遥侯就可以真的死了，这世上也就不会再有人知道我的秘密，更不会有人怀疑到我就是天宗的主人，所以我还是跟以前一样，是白璧无瑕，侠义无双的连城璧。” <br>
+　　萧十一郎已经醉了，已经醉得快要倒下去。 <br>
+　　可是他却还有一句话要问，非问不可。 <br>
+　　他用尽全身所有的力量，支持住自己，大声道：“你为什么要把这些事告诉我？” <br>
+　　连城璧道：“因为我要让你痛苦，我要让你自己也觉得自己是个无可救药的呆子。” <br>
+　　他脸上又露出那种温柔文雅的微笑。 <br>
+　　他微笑着站起来，扳了扳萧十一郎的肩，道：“现在我要走了，那一百坛酒，我还留给你，可是你最好记住，那也许是你一生之中最后的欢乐，喝完了这一百坛酒之后，你怎么还能活得下去？” <br>
+　　他没有再等萧十一郎回答，就走出了门，他走出门的时候，萧十一郎已倒了下去。
+
+　　无垢山庄巍峨如故，耸立在群山中，也耸立在世人心中。<br>
+　　连城璧迈着轻快的步子穿过花园，整个人都似有轻飘飘的感觉。<br>
+　　他从来没有像现在这样愉快过，不仅是为了多年宿愿一朝得偿，更主要的是，他没有用一分武力，不必凭借武功剑术，就已将名满天下的萧十一郎彻底击败，而且败得那样惨，那样可笑。<br>
+　　至少，他证明了一件事，拥有绝世武功并不一定就是强者，而高超的智慧，精密的算计，才是争雄武林的真正本钱。<br>
+　　不是吗？萧十一郎何等英雄，现在却变成了一条狗。<br>
+　　一条连窝都没有的野狗，癞皮狗。<br>
+　　连城璧真想大笑，这胜利的果实虽然得来不易，但他毕竟还是得到了。<br>
+　　他默默进行着这个伟大的计划，默默忍受着各种心灵肉体上最惨重的打击——包括失去全部财产和最心爱的妻子，如今，一切又回到自己手中。<br>
+　　除了沈璧君。<br>
+　　他相信沈璧君业已投水而死，否则，她一定会重回自己怀抱。<br>
+　　死了沈璧君，却毁了萧十一郎，得失之间，仍然还是划算的。<br>
+　　天涯何处无芳草，世上尽多比沈璧君更好的女人，却绝不可能再有第二个萧十一郎。<br>
+　　大厅上寂静，灯火通明。<br>
+　　那柄黄金铸成的剑，仍在灯下闪闪发光。<br>
+　　连城璧的眼中也闪亮着异彩。<br>
+　　从今后，无垢山庄将永远成为人们心目中“仁义”的象征，连城璧三个字，也将永远流传不朽，成为侠中之侠，英雄中的英雄。<br>
+　　谁也不会知道连城璧才是真正的天宗第二代，这秘密势将随萧十一郎同化乌有，永远没有被揭穿的时候。<br>
+　　无垢山庄始终是白璧无瑕的，必然千秋万世受后人的尊敬和景仰。<br>
+　　连城璧得意的笑了。<br>
+　　这一刹那，他才真正确定自己是获胜者，多年来的忍耐和屈辱，终于得到了补偿。<br>
+　　他突然有一种如释重负的快感，不由自主，又抚摸着那柄金剑。<br>
+　　剑是冷的，他的心却热得可以煮熟一头牛。<br>
+　　灼热的手指触摸着剑身，给他一种清凉的感觉。<br>
+　　他现在太兴奋，他需要清凉使自己的情绪稍微平静一些……<br>
+　　突然，他怔住了。
+
+-------
 关于荣誉和耻辱，这个时代有自己的理解，它同以往任何时代对它们的理解都完全不同。在我们这个时代，给自己提出一个很高的目标，是一种使人立即丧失荣誉和良好名声的罪行。——有一位人说，“那个提出这种目标的人自己说过，他想把哲学提高到一种具有自明性的科学的高度，他想成为哲学界的欧几里得（虽然后面这句话不是他自己说的）”
 “噢，不，”第二位心肠更好的人回答道，“那个人有自己的敌人，这不过是人们给他捏造出来的，我不相信这种话。”
 ——“那你就自己看吧，这儿印着呢。”
