--- a/text/歌词.md
+++ b/text/歌词.md
@@ -1,7 +1,34 @@
 2025年：以歌词为主，也包含一些古诗词
 
-最新 8.3
+最新 8.5
 
+戴娆 - 铁齿铜牙纪晓岚
+
+作词: 邹静之
+作曲: 丁缨
+
+秋雁两行江上雨<br>
+天南地北的人<br>
+讲道理的是知己<br>
+殿上君王堂下臣<br>
+心存百姓的人<br>
+百姓心中自有你<br>
+
+说的都是理<br>
+噢 唱的都是曲<br>
+铁齿铜牙 两片嘴<br>
+吃的是下锅的米<br>
+噢 说的都是理<br>
+噢 唱的都是曲<br>
+铁齿铜牙 两片嘴<br>
+吃的是下锅的米<br>
+
+走的是人间的道<br>
+扛的是顶风的旗<br>
+铁齿铜牙两片嘴<br>
+百姓心中有了你<br>
+
+---------
 甄妮 - 天子寻龙
 
 作词：张浩
