--- a/text/歌词.md
+++ b/text/歌词.md
@@ -2,6 +2,36 @@
 
 最新 8.5
 
+水灵/赵文卓 - 回首寒梅
+
+作词: 陈心宁
+作曲: 吕祯晃
+
+一剪寒梅 绽放在你心头<br>
+
+有你是春天 离开是寒夜<br>
+我远远看着你垂泪<br>
+伸手却触碰不到你的脸<br>
+天上有流云 地上有彩蝶<br>
+我遥遥望着你笑开了眉<br>
+其实我早已飞到你的天<br>
+
+我不会让你一个人走<br>
+我今生不配同时拥有<br>
+挽留了明月 挽不住风<br>
+最美的承诺 就是你回眸<br>
+
+我不会让你一个人走<br>
+我为了爱你决定不走<br>
+盼到了春天 留住了风<br>
+夜才刚亮起 梦已重上心头<br>
+
+一剪寒梅
+
+-------
+![情深](../pic/sub/jixu.JPG) <br>
+
+-------
 戴娆 - 铁齿铜牙纪晓岚
 
 作词: 邹静之
