--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -1,14 +1,17 @@
 2025年想法：
 
-最新 8.5：
+最新 8.6：
 
+很多事情其他人没用能力去做，需要更优秀的人去做，你们就是极少数有能力做这些事的优秀人才。而我做的事情都很简单，审美能力谁都有，况且我做的工作也没什么技术含量，只是比较用心而已，但我认为我的分享是有社会价值的。对于有正常社会关系的人来说，受限于大家的社会角色，不方便做这件事，尤其是男性，而我作为一个没什么社交关系的幻想家，刚好适合做这件事。我现在做的就好像有什么驱动着我一样，让我不停地从一个标记指向另一个标记。
+
+------
 截取，03年萧十一郎，背景音乐第四十集<br>
 https://5sing.kugou.com/bz/2878418.html
 
 ![至少爱过](../pic/sub/jieju.JPG) <br>
 
 ------
-现在的LLM不可能产生“涌现”，因为没有历史演化，模型好像是参数训练好了就固定在那里。
+现在的LLM不可能“涌现”出AGI，因为没有历史演化，模型好像是参数训练好了就固定在那里。
 
 ------
 零几年时的中央电视台很强势，但最多也只有十几个台，而地方电视台多如牛毛，有省级的、市级的、县级的，装了闭路电视可以看40多个台，所以当时拍的电视剧也很强势。现在能看电视剧的也就那么几个网络平台，新拍的电视剧似乎都不太强势了，我都分不清到底是不好看才变得不强势，还是不强势才变得不好看。至于未来会变成什么样，我也不知道。
