--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,8 +1,14 @@
 
+拓扑学中有哪些只对低维成立的定理？ - 幻想浄瑠璃的回答   <br>
+https://www.zhihu.com/question/33203110/answer/2116986848
+
+幻想浄瑠璃：低年级的基础拓扑学里面有一个有趣的例子，就是n维流形的三角剖分（即单纯剖分）问题。很多同学感觉流形就应该可以三角剖分，但是这个问题好像没有我们想象中那么简单。
+
+------
 怎么看待樱花动漫运营者被判2年3个月? - 枫林晚丶的回答  <br>
 https://www.zhihu.com/question/1934241278582822809/answer/1934665504422893169
 
-枫林晚丶：国内的支持正版大都是假借正版之名，搞垄断之实，然后搞各种vip恶习你。
+枫林晚丶：国内的支持正版大都是假借正版之名，搞垄断之实，然后搞各种vip恶心你。 
 
 ------
 韩毓海：我带荷兰人一起重读毛泽东<br>
