--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,3 +1,8 @@
+武大图书馆事件中，肖同学为什么没有及时说明自身湿疹情况而是写道歉书？ - 天下布武孙传庭的回答 <br>
+https://www.zhihu.com/question/1934626085330482220/answer/1935293086143087919
+
+天下布武孙传庭：
+明白了，受害者必须要完美无缺，反应必须滴水不漏，毫无瑕疵，不能情绪失控，不能退缩，不能收到压力或者威胁就选择妥协。 而加害者，即使漏洞百出，证据确凿，做实诬告的情况下，依然可以反过来质问受害者，你为什么要忍让？你为什么要写道歉书？ 所以老实人就活该被欺负？…阅读全文​
 
 拓扑学中有哪些只对低维成立的定理？ - 幻想浄瑠璃的回答   <br>
 https://www.zhihu.com/question/33203110/answer/2116986848
