--- a/text/收藏2.md
+++ b/text/收藏2.md
@@ -72,13 +72,13 @@ https://www.zhihu.com/question/11047081559/answer/103876106848
 　　他一面说，一面拉过那张椅子，赶紧坐下来。<br>
 　　那女子侧着头，盯着他的脸，一字字道：“傲慢、无礼、冷酷，但却也有一两点能令小姑娘着迷的地方……你果然和传说中的样子分毫不差。”
 
-    那女子嘴角泛起一丝恶意的微笑，但楚留香却不让她说话，他手拉着她的手，眼睛瞧着她的眼睛，道：“冷姑娘，你若想将这件事谜底揭穿，就必须信任我。”<br>
-　　他话声听来那么温柔，那么诚恳，而他的眼睛更比世上所有的言语更具说服人的力量。<br>
-　　那女子终于赧然一笑，道：“我不姓冷。”<br>
-　　楚留香眼睛闪着光，道：“那么，我该叫你什么？”<br>
-　　那女子脸色突又沉下来，冷冷道：“就叫我冷姑娘吧！”
+　　那女子嘴角泛起一丝恶意的微笑，但楚留香却不让她说话，他手拉着她的手，眼睛瞧着她的眼睛，道：“冷姑娘，你若想将这件事谜底揭穿，就必须信任我。” <br>
+　　他话声听来那么温柔，那么诚恳，而他的眼睛更比世上所有的言语更具说服人的力量。 <br>
+　　那女子终于赧然一笑，道：“我不姓冷。” <br>
+　　楚留香眼睛闪着光，道：“那么，我该叫你什么？” <br>
+　　那女子脸色突又沉下来，冷冷道：“就叫我冷姑娘吧！” <br>
 
-　　那女子再不理他，从船舷旁，缓缓走到船尾。<br>
+	那女子再不理他，从船舷旁，缓缓走到船尾。<br>
 　　船尾的阴影里，有只精巧的小艇。<br>
 　　她飘身掠下去，小艇竟立即滑开。<br>
 　　楚留香倚在船舷上，静静地瞧着她。<br>
