--- a/text/收藏2.md
+++ b/text/收藏2.md
@@ -78,11 +78,11 @@ https://www.zhihu.com/question/11047081559/answer/103876106848
 　　楚留香眼睛闪着光，道：“那么，我该叫你什么？” <br>
 　　那女子脸色突又沉下来，冷冷道：“就叫我冷姑娘吧！” <br>
 
-	那女子再不理他，从船舷旁，缓缓走到船尾。<br>
-　　船尾的阴影里，有只精巧的小艇。<br>
-　　她飘身掠下去，小艇竟立即滑开。<br>
-　　楚留香倚在船舷上，静静地瞧着她。<br>
-　　星光灿烂，轻舟仿佛荡漾在星海里，风舞的轻纱，更像是仙子的羽衣，她忽然回过头，嫣然一笑，道：“我的名字叫宫南燕。”
+　　那女子再不理他，从船舷旁，缓缓走到船尾。 <br>
+　　船尾的阴影里，有只精巧的小艇。 <br>
+　　她飘身掠下去，小艇竟立即滑开。 <br>
+　　楚留香倚在船舷上，静静地瞧着她。 <br>
+　　星光灿烂，轻舟仿佛荡漾在星海里，风舞的轻纱，更像是仙子的羽衣，她忽然回过头，嫣然一笑，道：“我的名字叫宫南燕。” <br>
 
 -------
 	原随云道：“我会的武功一共有三十三种，无论用哪种都可将你击倒。”<br>
