--- a/text/收藏2.md
+++ b/text/收藏2.md
@@ -40,6 +40,12 @@ https://www.zhihu.com/question/11047081559/answer/103876106848
 
 如果说在现实的科学中不存在除了事实性证据之外的其他原则，而绝对知识却想要引入生成性证据，并从中推导出事实性证据，那么很明显，绝对知识在其内在、精神和生命方面与迄今为止所有科学的理性运用完全不同，不学习它本身的人都不了解它，而且它的地位绝对不能被任何其他东西所取代。
 
+到此争论平息了；你们以后别再这么瞎笑，如果你们还能聪明起来，那可真叫我由衷地感到高兴。
+
+我渐渐后悔与我们这位书评家进行交往，因为我在半路上碰到了对我来说内容丰富得多的原著，而对我们这位书评家来说，只要他有能力做这些愚蠢之极的事，这一切都可以用来抬高他自己。
+
+事情看来并非如此。在后面第193页，他又这样来理解我的演绎：我证明，有很多人彼此并存，他们通过空气和阳光而相互知觉到对方。
+
 --------
 　　李红袖皱眉道：“七星飞环！这人莫非是‘天星帮’的门下？”
 
