--- a/text/收藏2.md
+++ b/text/收藏2.md
@@ -114,3 +114,16 @@ theigrams：观察员 经过个人测试，尽可能将题目转成 LaTeX 公式
 
 --------
 人对事物的认识，总要经过多次的反复，要有一个积累的过程。要积累大量的感性材料，才会引起从感性认识到理性认识的飞跃。关于从实践到感性，再从感性到理性的飞跃的道理，马克思和恩格斯都没有讲清楚。列宁也没有讲清楚，列宁的《唯物主义与经验批判主义》只讲清楚了唯物论，但是没有完全讲清楚认识论。最近艾思奇在高级党校讲话说到这一点是对的。这个道理，中国古人也没有讲清楚。老子、庄子没有讲清楚。墨子讲了些认识论方面的问题，也没有讲清楚。张载、李卓吾、王船山、谭嗣同都没有讲清楚。什么叫哲学？哲学就是认识论，别的没有。双十条第一个十条前面那一段是我写的。我讲了物质变精神，精神变物质。我还讲了哲学，一次不要讲得太长，最多一小时就够了。多讲，越讲越糊涂。我还讲哲学要从课堂书斋里解放出来。我这些话触到了有些人的痛处，他们出来搞“合二而一”反对我。
+
+-------
+在哲学中，命题决不能得到固定证明；而且情形之所以如此，并不仅仅是因为没有什么最高的命题，从中可以推出其他命题，而是因为在这里真实的东西根本不是“命题”，也不简单地是“命题”所陈述的那个东西。一切“证明”皆有前提，都预设了一点：理解者，如他在表象之际面对命题内涵一样，在对其有证明作用的表象联系的理解中依然毫无变化地保持为同一个人。而且，唯有证明过程的“结果”才能要求一种改变了的表象方式，或者不如说对迄今为止未被注意到的东西的表象。
+
+萧师毅：海德格尔与我们《道德经》的翻译 <br>
+https://www.douban.com/note/705334484/?_i=2839341shLS-Vg
+
+“萧先生，如果人们对于您同一段的文章却有两种截然不同的见解，您会如何回应？”海德格尔这突兀和略带刺激性的问题叫我吃了一惊。“这怎么可能呢？纳粹针对我的《存在与时间》中的某一段话，说：‘海德格尔先生，从您这书上所写的，我们很清楚地看出您不是雅利安人’。而现在，您的法国盟友却向我呈现同一段话，说：‘海德格尔先生，从您这书上所写的，可清楚看出您就是纳粹。’瞧！萧先生，同一本书的同一段文章却能产生不同的结果。您对此有何看法？”
+
+【王玖兴】费希特的《全部知识学基础》 <br>
+http://philosophychina.cssn.cn/zxts/wgzx/qmydsqdzxhkdzx/201507/t20150713_2726106.shtml?&back
+
+他在1806年10月8日给Hardenberg的信中说,“我的终生任务,是要给知识学作一个完整清楚的叙述,这个任务没有完成,但已接近完成。”而根据他儿子的所说,他曾打算找一个安静的地方,把他从1793年冬天所想出来的知识学写出一部最后定稿,然后他就再也不想发表任何别的著作了。但这个计划没有来得及完成,他在1814年1月28日就去世了。
